@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -37,10 +37,10 @@ import java.lang.module.ModuleDescriptor.Version;
 import java.lang.module.ResolvedModule;
 import java.lang.reflect.AccessFlag;
 import java.lang.reflect.AnnotatedElement;
+import java.lang.reflect.Field;
 import java.net.URI;
 import java.net.URL;
-import java.security.AccessController;
-import java.security.PrivilegedAction;
+import java.security.CodeSource;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -54,26 +54,23 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.lang.classfile.AccessFlags;
 import java.lang.classfile.Attribute;
-import java.lang.classfile.ClassModel;
-import java.lang.classfile.ClassTransform;
 import java.lang.classfile.ClassFile;
-import java.lang.classfile.attribute.ModuleAttribute;
 import java.lang.classfile.attribute.RuntimeVisibleAnnotationsAttribute;
 
-import jdk.internal.javac.PreviewFeature;
 import jdk.internal.loader.BuiltinClassLoader;
 import jdk.internal.loader.BootLoader;
 import jdk.internal.loader.ClassLoaders;
 import jdk.internal.misc.CDS;
 import jdk.internal.misc.Unsafe;
+import jdk.internal.misc.VM;
 import jdk.internal.module.ModuleBootstrap;
 import jdk.internal.module.ModuleLoaderMap;
 import jdk.internal.module.ServicesCatalog;
 import jdk.internal.module.Resources;
 import jdk.internal.reflect.CallerSensitive;
 import jdk.internal.reflect.Reflection;
+import jdk.internal.vm.annotation.AOTSafeClassInitializer;
 import jdk.internal.vm.annotation.Stable;
-import sun.security.util.SecurityConstants;
 
 /**
  * Represents a run-time module, either {@link #isNamed() named} or unnamed.
@@ -119,6 +116,10 @@ public final class Module implements AnnotatedElement {
     // memory semantics that preserves ordering and visibility across threads.
     @Stable
     private boolean enableNativeAccess;
+
+    // true if this module is allowed to mutate final instance fields
+    @Stable
+    private boolean enableFinalMutation;
 
     /**
      * Creates a new named Module. The resulting Module will be defined to the
@@ -197,22 +198,9 @@ public final class Module implements AnnotatedElement {
     /**
      * Returns the {@code ClassLoader} for this module.
      *
-     * <p> If there is a security manager then its {@code checkPermission}
-     * method if first called with a {@code RuntimePermission("getClassLoader")}
-     * permission to check that the caller is allowed to get access to the
-     * class loader. </p>
-     *
      * @return The class loader for this module
-     *
-     * @throws SecurityException
-     *         If denied by the security manager
      */
     public ClassLoader getClassLoader() {
-        @SuppressWarnings("removal")
-        SecurityManager sm = System.getSecurityManager();
-        if (sm != null) {
-            sm.checkPermission(SecurityConstants.GET_CLASSLOADER_PERMISSION);
-        }
         return loader;
     }
 
@@ -265,7 +253,7 @@ public final class Module implements AnnotatedElement {
 
     /**
      * Returns {@code true} if this module can access
-     * <a href="foreign/package-summary.html#restricted"><em>restricted</em></a> methods.
+     * <a href="{@docRoot}/java.base/java/lang/doc-files/RestrictedMethods.html#restricted"><em>restricted</em></a> methods.
      *
      * @return {@code true} if this module can access <em>restricted</em> methods.
      * @since 22
@@ -280,7 +268,6 @@ public final class Module implements AnnotatedElement {
      * in the outer Module class as that would create a circular initializer dependency.
      */
     private static final class EnableNativeAccess {
-
         private EnableNativeAccess() {}
 
         private static final Unsafe UNSAFE = Unsafe.getUnsafe();
@@ -304,35 +291,95 @@ public final class Module implements AnnotatedElement {
     }
 
     // This is invoked from Reflection.ensureNativeAccess
-    void ensureNativeAccess(Class<?> owner, String methodName, Class<?> currentClass) {
+    void ensureNativeAccess(Class<?> owner, String methodName, Class<?> currentClass, boolean jni) {
         // The target module whose enableNativeAccess flag is ensured
         Module target = moduleForNativeAccess();
-        if (!EnableNativeAccess.isNativeAccessEnabled(target)) {
-            if (ModuleBootstrap.hasEnableNativeAccessFlag()) {
-                throw new IllegalCallerException("Illegal native access from: " + this);
+        ModuleBootstrap.IllegalNativeAccess illegalNativeAccess = ModuleBootstrap.illegalNativeAccess();
+        if (illegalNativeAccess != ModuleBootstrap.IllegalNativeAccess.ALLOW &&
+                !EnableNativeAccess.isNativeAccessEnabled(target)) {
+            String mod = isNamed() ? "module " + getName() : "an unnamed module";
+            if (currentClass != null) {
+                // try to extract location of the current class (e.g. jar or folder)
+                CodeSource cs = currentClass.getProtectionDomain().getCodeSource();
+                if (cs != null) {
+                    URL url = cs.getLocation();
+                    if (url != null) {
+                        mod += " (" + url + ")";
+                    }
+                }
             }
-            if (EnableNativeAccess.trySetEnableNativeAccess(target)) {
+            if (illegalNativeAccess == ModuleBootstrap.IllegalNativeAccess.DENY) {
+                throw new IllegalCallerException("Illegal native access from " + mod);
+            } else if (EnableNativeAccess.trySetEnableNativeAccess(target)) {
                 // warn and set flag, so that only one warning is reported per module
                 String cls = owner.getName();
                 String mtd = cls + "::" + methodName;
-                String mod = isNamed() ? "module " + getName() : "an unnamed module";
                 String modflag = isNamed() ? getName() : "ALL-UNNAMED";
                 String caller = currentClass != null ? currentClass.getName() : "code";
-                System.err.printf("""
-                        WARNING: A restricted method in %s has been called
-                        WARNING: %s has been called by %s in %s
-                        WARNING: Use --enable-native-access=%s to avoid a warning for callers in this module
-                        WARNING: Restricted methods will be blocked in a future release unless native access is enabled
-                        %n""", cls, mtd, caller, mod, modflag);
+                if (jni) {
+                    VM.initialErr().printf("""
+                            WARNING: A native method in %s has been bound
+                            WARNING: %s is declared in %s
+                            WARNING: Use --enable-native-access=%s to avoid a warning for native methods declared in this module
+                            WARNING: Restricted methods will be blocked in a future release unless native access is enabled
+                            %n""", cls, mtd, mod, modflag);
+                } else {
+                    VM.initialErr().printf("""
+                            WARNING: A restricted method in %s has been called
+                            WARNING: %s has been called by %s in %s
+                            WARNING: Use --enable-native-access=%s to avoid a warning for callers in this module
+                            WARNING: Restricted methods will be blocked in a future release unless native access is enabled
+                            %n""", cls, mtd, caller, mod, modflag);
+                }
             }
         }
     }
 
     /**
-     * Update all unnamed modules to allow access to restricted methods.
+     * Enable code in all unnamed modules to access restricted methods.
      */
-    static void implAddEnableNativeAccessToAllUnnamed() {
+    static void addEnableNativeAccessToAllUnnamed() {
         EnableNativeAccess.trySetEnableNativeAccess(ALL_UNNAMED_MODULE);
+    }
+
+    /**
+     * This class exists to avoid using Unsafe during early initialization of Module.
+     */
+    private static final class EnableFinalMutation {
+        private static final Unsafe UNSAFE = Unsafe.getUnsafe();
+        private static final long ENABLE_FINAL_MUTATION_OFFSET =
+                UNSAFE.objectFieldOffset(Module.class, "enableFinalMutation");
+
+        private static boolean isEnableFinalMutation(Module module) {
+            return UNSAFE.getBooleanVolatile(module, ENABLE_FINAL_MUTATION_OFFSET);
+        }
+
+        private static boolean tryEnableFinalMutation(Module module) {
+            return UNSAFE.compareAndSetBoolean(module, ENABLE_FINAL_MUTATION_OFFSET, false, true);
+        }
+    }
+
+    /**
+     * Enable code in all unnamed modules to mutate final instance fields.
+     */
+    static void addEnableFinalMutationToAllUnnamed() {
+        EnableFinalMutation.tryEnableFinalMutation(ALL_UNNAMED_MODULE);
+    }
+
+    /**
+     * Enable code in this named module to mutate final instance fields.
+     */
+    boolean tryEnableFinalMutation() {
+        Module m = isNamed() ? this : ALL_UNNAMED_MODULE;
+        return EnableFinalMutation.tryEnableFinalMutation(m);
+    }
+
+    /**
+     * Return true if code in this module is allowed to mutate final instance fields.
+     */
+    boolean isFinalMutationEnabled() {
+        Module m = isNamed() ? this : ALL_UNNAMED_MODULE;
+        return EnableFinalMutation.isEnableFinalMutation(m);
     }
 
     // --
@@ -345,6 +392,7 @@ public final class Module implements AnnotatedElement {
     private static final Module EVERYONE_MODULE;
     private static final Set<Module> EVERYONE_SET;
 
+    @AOTSafeClassInitializer
     private static class ArchivedData {
         private static ArchivedData archivedData;
         private final Module allUnnamedModule;
@@ -685,7 +733,6 @@ public final class Module implements AnnotatedElement {
         return implIsExportedOrOpen(pn, EVERYONE_MODULE, /*open*/true);
     }
 
-
     /**
      * Returns {@code true} if this module exports or opens the given package
      * to the given module. If the other module is {@code EVERYONE_MODULE} then
@@ -704,12 +751,12 @@ public final class Module implements AnnotatedElement {
         if (descriptor.isOpen() || descriptor.isAutomatic())
             return descriptor.packages().contains(pn);
 
-        // exported/opened via module declaration/descriptor
-        if (isStaticallyExportedOrOpen(pn, other, open))
+        // exported/opened via module declaration/descriptor or CLI options
+        if (isExplicitlyExportedOrOpened(pn, other, open))
             return true;
 
         // exported via addExports/addOpens
-        if (isReflectivelyExportedOrOpen(pn, other, open))
+        if (isReflectivelyExportedOrOpened(pn, other, open))
             return true;
 
         // not exported or open to other
@@ -717,10 +764,52 @@ public final class Module implements AnnotatedElement {
     }
 
     /**
-     * Returns {@code true} if this module exports or opens a package to
-     * the given module via its module declaration or CLI options.
+     * Returns {@code true} if this module statically exports a package to the given module.
+     * If the package is exported to the given module via {@code addExports} then this method
+     * returns {@code false}.
      */
-    private boolean isStaticallyExportedOrOpen(String pn, Module other, boolean open) {
+    boolean isStaticallyExported(String pn, Module other) {
+        return isStaticallyExportedOrOpened(pn, other, false);
+    }
+
+    /**
+     * Returns {@code true} if this module statically opens a package to the given module.
+     * If the package is opened to the given module via {@code addOpens} then this method
+     * returns {@code false}.
+     */
+    boolean isStaticallyOpened(String pn, Module other) {
+        return isStaticallyExportedOrOpened(pn, other, true);
+    }
+
+    /**
+     * Returns {@code true} if this module exports or opens a package to the
+     * given module via its module declaration or CLI options.
+     */
+    private boolean isStaticallyExportedOrOpened(String pn, Module other, boolean open) {
+        // all packages in unnamed modules are exported and open
+        if (!isNamed())
+            return true;
+
+        // all packages are exported/open to self
+        if (other == this && descriptor.packages().contains(pn))
+            return true;
+
+        // all packages in open and automatic modules are exported/open
+        if (descriptor.isOpen() || descriptor.isAutomatic())
+            return descriptor.packages().contains(pn);
+
+        // exported/opened via module descriptor
+        if (isExplicitlyExportedOrOpened(pn, other, open))
+            return true;
+
+        return false;
+    }
+
+    /**
+     * Returns {@code true} if this module exports or opens a package to the
+     * given module via its module declaration or CLI options.
+     */
+    private boolean isExplicitlyExportedOrOpened(String pn, Module other, boolean open) {
         // test if package is open to everyone or <other>
         Map<String, Set<Module>> openPackages = this.openPackages;
         if (openPackages != null && allows(openPackages.get(pn), other)) {
@@ -761,7 +850,7 @@ public final class Module implements AnnotatedElement {
      * Returns {@code true} if this module reflectively exports or opens the
      * given package to the given module.
      */
-    private boolean isReflectivelyExportedOrOpen(String pn, Module other, boolean open) {
+    private boolean isReflectivelyExportedOrOpened(String pn, Module other, boolean open) {
         // exported or open to all modules
         Map<String, Boolean> exports = ReflectionData.exports.get(this, EVERYONE_MODULE);
         if (exports != null) {
@@ -806,7 +895,7 @@ public final class Module implements AnnotatedElement {
      * given package to the given module.
      */
     boolean isReflectivelyExported(String pn, Module other) {
-        return isReflectivelyExportedOrOpen(pn, other, false);
+        return isReflectivelyExportedOrOpened(pn, other, false);
     }
 
     /**
@@ -814,13 +903,18 @@ public final class Module implements AnnotatedElement {
      * given package to the given module.
      */
     boolean isReflectivelyOpened(String pn, Module other) {
-        return isReflectivelyExportedOrOpen(pn, other, true);
+        return isReflectivelyExportedOrOpened(pn, other, true);
     }
-
 
     /**
      * If the caller's module is this module then update this module to export
      * the given package to the given module.
+     *
+     * <p> Exporting a package with this method does not allow the given module to
+     * {@linkplain Field#set(Object, Object) reflectively set} or {@linkplain
+     * java.lang.invoke.MethodHandles.Lookup#unreflectSetter(Field) obtain a method
+     * handle with write access} to a public final field declared in a public class
+     * in the package.
      *
      * <p> This method has no effect if the package is already exported (or
      * <em>open</em>) to the given module. </p>
@@ -859,20 +953,26 @@ public final class Module implements AnnotatedElement {
             if (caller != this) {
                 throw new IllegalCallerException(caller + " != " + this);
             }
-            implAddExportsOrOpens(pn, other, /*open*/false, /*syncVM*/true);
+            implAddExports(pn, other);
         }
 
         return this;
     }
 
     /**
-     * If this module has <em>opened</em> a package to at least the caller
-     * module then update this module to open the package to the given module.
-     * Opening a package with this method allows all types in the package,
+     * If this module has <em>opened</em> the given package to at least the caller
+     * module, then update this module to also open the package to the given module.
+     *
+     * <p> Opening a package with this method allows all types in the package,
      * and all their members, not just public types and their public members,
-     * to be reflected on by the given module when using APIs that support
-     * private access or a way to bypass or suppress default Java language
+     * to be reflected on by the given module when using APIs that either support
+     * private access or provide a way to bypass or suppress Java language
      * access control checks.
+     *
+     * <p> Opening a package with this method does not allow the given module to
+     * {@linkplain Field#set(Object, Object) reflectively set} or {@linkplain
+     * java.lang.invoke.MethodHandles.Lookup#unreflectSetter(Field) obtain a method
+     * handle with write access} to a final field declared in a class in the package.
      *
      * <p> This method has no effect if the package is already <em>open</em>
      * to the given module. </p>
@@ -912,7 +1012,7 @@ public final class Module implements AnnotatedElement {
             Module caller = getCallerModule(Reflection.getCallerClass());
             if (caller != this && (caller == null || !isOpen(pn, caller)))
                 throw new IllegalCallerException(pn + " is not open to " + caller);
-            implAddExportsOrOpens(pn, other, /*open*/true, /*syncVM*/true);
+            implAddOpens(pn, other);
         }
 
         return this;
@@ -922,28 +1022,29 @@ public final class Module implements AnnotatedElement {
     /**
      * Updates this module to export a package unconditionally.
      *
-     * @apiNote This method is for JDK tests only.
+     * @apiNote Used by Proxy and other dynamic modules.
      */
     void implAddExports(String pn) {
-        implAddExportsOrOpens(pn, Module.EVERYONE_MODULE, false, true);
+        implAddExportsOrOpens(pn, Module.EVERYONE_MODULE, false, true, true);
     }
 
     /**
      * Updates this module to export a package to another module.
      *
-     * @apiNote Used by Instrumentation::redefineModule and --add-exports
+     * @apiNote Used by addExports, Instrumentation::redefineModule, and --add-exports
      */
     void implAddExports(String pn, Module other) {
-        implAddExportsOrOpens(pn, other, false, true);
+        implAddExportsOrOpens(pn, other, false, VM.isBooted(), true);
     }
 
     /**
      * Updates this module to export a package to all unnamed modules.
      *
-     * @apiNote Used by the --add-exports command line option.
+     * @apiNote Used by the --add-exports command line option and the launcher when
+     * an executable JAR file has the "Add-Exports" attribute in its main manifest.
      */
     void implAddExportsToAllUnnamed(String pn) {
-        implAddExportsOrOpens(pn, Module.ALL_UNNAMED_MODULE, false, true);
+        implAddExportsOrOpens(pn, Module.ALL_UNNAMED_MODULE, false, false, true);
     }
 
     /**
@@ -953,7 +1054,7 @@ public final class Module implements AnnotatedElement {
      * @apiNote This method is for VM white-box testing.
      */
     void implAddExportsNoSync(String pn) {
-        implAddExportsOrOpens(pn.replace('/', '.'), Module.EVERYONE_MODULE, false, false);
+        implAddExportsOrOpens(pn.replace('/', '.'), Module.EVERYONE_MODULE, false, true, false);
     }
 
     /**
@@ -963,7 +1064,7 @@ public final class Module implements AnnotatedElement {
      * @apiNote This method is for VM white-box testing.
      */
     void implAddExportsNoSync(String pn, Module other) {
-        implAddExportsOrOpens(pn.replace('/', '.'), other, false, false);
+        implAddExportsOrOpens(pn.replace('/', '.'), other, false, true, false);
     }
 
     /**
@@ -972,35 +1073,40 @@ public final class Module implements AnnotatedElement {
      * @apiNote This method is for JDK tests only.
      */
     void implAddOpens(String pn) {
-        implAddExportsOrOpens(pn, Module.EVERYONE_MODULE, true, true);
+        implAddExportsOrOpens(pn, Module.EVERYONE_MODULE, true, true, true);
     }
 
     /**
      * Updates this module to open a package to another module.
      *
-     * @apiNote Used by Instrumentation::redefineModule and --add-opens
+     * @apiNote Used by addOpens, Instrumentation::redefineModule, and --add-opens
      */
     void implAddOpens(String pn, Module other) {
-        implAddExportsOrOpens(pn, other, true, true);
+        implAddExportsOrOpens(pn, other, true, VM.isBooted(), true);
     }
 
     /**
      * Updates this module to open a package to all unnamed modules.
      *
-     * @apiNote Used by the --add-opens command line option.
+     * @apiNote Used by the --add-opens command line option and the launcher when
+     * an executable JAR file has the "Add-Opens" attribute in its main manifest.
      */
     void implAddOpensToAllUnnamed(String pn) {
-        implAddExportsOrOpens(pn, Module.ALL_UNNAMED_MODULE, true, true);
+        implAddExportsOrOpens(pn, Module.ALL_UNNAMED_MODULE, true, false, true);
     }
 
     /**
      * Updates a module to export or open a module to another module.
-     *
-     * If {@code syncVM} is {@code true} then the VM is notified.
+     * @param pn package name
+     * @param other the module to export/open the package to
+     * @param open true to open, false to export
+     * @param reflectively true if exported/opened reflectively
+     * @param syncVM true to update the VM
      */
     private void implAddExportsOrOpens(String pn,
                                        Module other,
                                        boolean open,
+                                       boolean reflectively,
                                        boolean syncVM) {
         Objects.requireNonNull(other);
         Objects.requireNonNull(pn);
@@ -1030,50 +1136,38 @@ public final class Module implements AnnotatedElement {
             }
         }
 
-        // add package name to exports if absent
-        Map<String, Boolean> map = ReflectionData.exports
-            .computeIfAbsent(this, other,
-                             (m1, m2) -> new ConcurrentHashMap<>());
-        if (open) {
-            map.put(pn, Boolean.TRUE);  // may need to promote from FALSE to TRUE
-        } else {
-            map.putIfAbsent(pn, Boolean.FALSE);
-        }
-    }
-
-    /**
-     * Updates a module to open all packages in the given sets to all unnamed
-     * modules.
-     *
-     * @apiNote Used during startup to open packages for illegal access.
-     */
-    void implAddOpensToAllUnnamed(Set<String> concealedPkgs, Set<String> exportedPkgs) {
-        if (jdk.internal.misc.VM.isModuleSystemInited()) {
-            throw new IllegalStateException("Module system already initialized");
-        }
-
-        // replace this module's openPackages map with a new map that opens
-        // the packages to all unnamed modules.
-        Map<String, Set<Module>> openPackages = this.openPackages;
-        if (openPackages == null) {
-            openPackages = HashMap.newHashMap(concealedPkgs.size() + exportedPkgs.size());
-        } else {
-            openPackages = new HashMap<>(openPackages);
-        }
-        implAddOpensToAllUnnamed(concealedPkgs, openPackages);
-        implAddOpensToAllUnnamed(exportedPkgs, openPackages);
-        this.openPackages = openPackages;
-    }
-
-    private void implAddOpensToAllUnnamed(Set<String> pkgs, Map<String, Set<Module>> openPackages) {
-        for (String pn : pkgs) {
-            Set<Module> prev = openPackages.putIfAbsent(pn, ALL_UNNAMED_MODULE_SET);
-            if (prev != null) {
-                prev.add(ALL_UNNAMED_MODULE);
+        if (reflectively) {
+            // add package name to ReflectionData.exports if absent
+            Map<String, Boolean> map = ReflectionData.exports
+                .computeIfAbsent(this, other,
+                                 (m1, m2) -> new ConcurrentHashMap<>());
+            if (open) {
+                map.put(pn, Boolean.TRUE);  // may need to promote from FALSE to TRUE
+            } else {
+                map.putIfAbsent(pn, Boolean.FALSE);
             }
-
-            // update VM to export the package
-            addExportsToAllUnnamed0(this, pn);
+        } else {
+            // export/open packages during startup (--add-exports and --add-opens)
+            Map<String, Set<Module>> packageToTargets = (open) ? openPackages : exportedPackages;
+            if (packageToTargets != null) {
+                // copy existing map
+                packageToTargets = new HashMap<>(packageToTargets);
+                packageToTargets.compute(pn, (_, values) -> {
+                    var targets = new HashSet<Module>();
+                    if (values != null) {
+                        targets.addAll(values);
+                    }
+                    targets.add(other);
+                    return targets;
+                });
+            } else {
+                packageToTargets = Map.of(pn, Set.of(other));
+            }
+            if (open) {
+                this.openPackages = packageToTargets;
+            } else {
+                this.exportedPackages = packageToTargets;
+            }
         }
     }
 
@@ -1549,7 +1643,6 @@ public final class Module implements AnnotatedElement {
     // cached class file with annotations
     private volatile Class<?> moduleInfoClass;
 
-    @SuppressWarnings("removal")
     private Class<?> moduleInfoClass() {
         Class<?> clazz = this.moduleInfoClass;
         if (clazz != null)
@@ -1559,8 +1652,7 @@ public final class Module implements AnnotatedElement {
             clazz = this.moduleInfoClass;
             if (clazz == null) {
                 if (isNamed()) {
-                    PrivilegedAction<Class<?>> pa = this::loadModuleInfoClass;
-                    clazz = AccessController.doPrivileged(pa);
+                    clazz = loadModuleInfoClass();
                 }
                 if (clazz == null) {
                     class DummyModuleInfo { }
@@ -1588,7 +1680,7 @@ public final class Module implements AnnotatedElement {
     private Class<?> loadModuleInfoClass(InputStream in) throws IOException {
         final String MODULE_INFO = "module-info";
         var cc = ClassFile.of(ClassFile.ConstantPoolSharingOption.NEW_POOL);
-        byte[] bytes = cc.transform(cc.parse(in.readAllBytes()), (clb, cle) -> {
+        byte[] bytes = cc.transformClass(cc.parse(in.readAllBytes()), (clb, cle) -> {
             switch (cle) {
                 case AccessFlags af -> clb.withFlags(AccessFlag.INTERFACE,
                         AccessFlag.ABSTRACT, AccessFlag.SYNTHETIC);
@@ -1674,9 +1766,8 @@ public final class Module implements AnnotatedElement {
      * with the name "{@code META-INF/MANIFEST.MF}" is never encapsulated
      * because "{@code META-INF}" is not a legal package name. </p>
      *
-     * <p> This method returns {@code null} if the resource is not in this
-     * module, the resource is encapsulated and cannot be located by the caller,
-     * or access to the resource is denied by the security manager. </p>
+     * <p> This method returns {@code null} if the resource is not in this module
+     * or the resource is encapsulated and cannot be located by the caller. </p>
      *
      * @param  name
      *         The resource name
