@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,6 +24,7 @@
 package compiler.lib.ir_framework.driver;
 
 import compiler.lib.ir_framework.TestFramework;
+import compiler.lib.ir_framework.driver.network.TestVMData;
 import compiler.lib.ir_framework.shared.TestFrameworkException;
 import compiler.lib.ir_framework.shared.TestFrameworkSocket;
 import compiler.lib.ir_framework.shared.NoTestsRunException;
@@ -34,15 +35,15 @@ import jdk.test.lib.Utils;
 import jdk.test.lib.process.OutputAnalyzer;
 import jdk.test.lib.process.ProcessTools;
 
+import java.io.File;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 /**
- * This class prepares, creates, and runs the "test" VM with verification of proper termination. The class also stores
- * information about the test VM which is later queried for IR matching. The communication between this driver VM
- * and the test VM is done over a dedicated socket.
+ * This class prepares, creates, and runs the Test VM with verification of proper termination. The class also stores
+ * information about the Test VM which is later queried for IR matching. The communication between this Driver VM
+ * and the Test VM is done over a dedicated socket.
  *
  * @see TestVM
  * @see TestFrameworkSocket
@@ -58,32 +59,32 @@ public class TestVMProcess {
     private static String lastTestVMOutput = "";
 
     private final ArrayList<String> cmds;
-    private String hotspotPidFileName;
     private String commandLine;
     private OutputAnalyzer oa;
-    private String irEncoding;
+    private final TestVMData testVmData;
 
-    public TestVMProcess(List<String> additionalFlags, Class<?> testClass, Set<Class<?>> helperClasses, int defaultWarmup) {
+    public TestVMProcess(List<String> additionalFlags, Class<?> testClass, Set<Class<?>> helperClasses, int defaultWarmup,
+                         boolean allowNotCompilable, boolean testClassesOnBootClassPath) {
         this.cmds = new ArrayList<>();
         TestFrameworkSocket socket = new TestFrameworkSocket();
         try (socket) {
-            prepareTestVMFlags(additionalFlags, socket, testClass, helperClasses, defaultWarmup);
+            socket.start();
+            prepareTestVMFlags(additionalFlags, socket, testClass, helperClasses, defaultWarmup,
+                               allowNotCompilable, testClassesOnBootClassPath);
             start();
         }
-        processSocketOutput(socket);
         checkTestVMExitCode();
+        String hotspotPidFileName = String.format("hotspot_pid%d.log", oa.pid());
+        testVmData = socket.testVmData(hotspotPidFileName, allowNotCompilable);
+        testVmData.printJavaMessages();
     }
 
     public String getCommandLine() {
         return commandLine;
     }
 
-    public String getIrEncoding() {
-        return irEncoding;
-    }
-
-    public String getHotspotPidFileName() {
-        return hotspotPidFileName;
+    public TestVMData testVmData() {
+        return testVmData;
     }
 
     public static String getLastTestVMOutput() {
@@ -91,19 +92,26 @@ public class TestVMProcess {
     }
 
     private void prepareTestVMFlags(List<String> additionalFlags, TestFrameworkSocket socket, Class<?> testClass,
-                                    Set<Class<?>> helperClasses, int defaultWarmup) {
+                                    Set<Class<?>> helperClasses, int defaultWarmup, boolean allowNotCompilable,
+                                    boolean testClassesOnBootClassPath) {
         // Set java.library.path so JNI tests which rely on jtreg nativepath setting work
         cmds.add("-Djava.library.path=" + Utils.TEST_NATIVE_PATH);
-        // Need White Box access in test VM.
-        cmds.add("-Xbootclasspath/a:.");
+        // Need White Box access in Test VM.
+        String bootClassPath = "-Xbootclasspath/a:.";
+        if (testClassesOnBootClassPath) {
+            // Add test classes themselves to boot classpath to make them privileged.
+            bootClassPath += File.pathSeparator + Utils.TEST_CLASS_PATH;
+        }
+        cmds.add(bootClassPath);
         cmds.add("-XX:+UnlockDiagnosticVMOptions");
         cmds.add("-XX:+WhiteBoxAPI");
         // Ignore CompileCommand flags which have an impact on the profiling information.
-        List<String> jtregVMFlags = Arrays.stream(Utils.getTestJavaOpts()).filter(s -> !s.contains("CompileThreshold")).collect(Collectors.toList());
+        List<String> jtregVMFlags = Arrays.stream(Utils.getTestJavaOpts()).filter(s -> !s.contains("CompileThreshold")).toList();
         if (!PREFER_COMMAND_LINE_FLAGS) {
             cmds.addAll(jtregVMFlags);
         }
-        // Add server property flag that enables test VM to print encoding for IR verification last and debug messages.
+        // Add server property flag that enables the Test VM to print the Applicable IR Rules for IR verification and
+        // debug messages.
         cmds.add(socket.getPortPropertyFlag());
         cmds.addAll(additionalFlags);
         cmds.addAll(Arrays.asList(getDefaultFlags()));
@@ -121,6 +129,10 @@ public class TestVMProcess {
             cmds.add("-DWarmup=" + defaultWarmup);
         }
 
+        if (allowNotCompilable) {
+            cmds.add("-DAllowNotCompilable=true");
+        }
+
         cmds.add(TestVM.class.getName());
         cmds.add(testClass.getName());
         if (helperClasses != null) {
@@ -129,7 +141,7 @@ public class TestVMProcess {
     }
 
     /**
-     * Default flags that are added used for the test VM.
+     * Default flags that are added used for the Test VM.
      */
     private static String[] getDefaultFlags() {
         return new String[] {"-XX:-BackgroundCompilation", "-XX:CompileCommand=quiet"};
@@ -156,62 +168,16 @@ public class TestVMProcess {
             throw new TestFrameworkException("Error while executing Test VM", e);
         }
 
-        process.command().add(1, "-DReproduce=true"); // Add after "/path/to/bin/java" in order to rerun the test VM directly
+        process.command().add(1, "-DReproduce=true"); // Add after "/path/to/bin/java" in order to rerun the Test VM directly
         commandLine = "Command Line:" + System.lineSeparator() + String.join(" ", process.command())
                       + System.lineSeparator();
-        hotspotPidFileName = String.format("hotspot_pid%d.log", oa.pid());
         lastTestVMOutput = oa.getOutput();
-    }
-
-    /**
-     * Process the socket output: All prefixed lines are dumped to the standard output while the remaining lines
-     * represent the IR encoding used for IR matching later.
-     */
-    private void processSocketOutput(TestFrameworkSocket socket) {
-        String output = socket.getOutput();
-        if (socket.hasStdOut()) {
-            StringBuilder testListBuilder = new StringBuilder();
-            StringBuilder messagesBuilder = new StringBuilder();
-            StringBuilder nonStdOutBuilder = new StringBuilder();
-            Scanner scanner = new Scanner(output);
-            while (scanner.hasNextLine()) {
-                String line = scanner.nextLine();
-                if (line.startsWith(TestFrameworkSocket.STDOUT_PREFIX)) {
-                    // Exclude [STDOUT] from message.
-                    line = line.substring(TestFrameworkSocket.STDOUT_PREFIX.length());
-                    if (line.startsWith(TestFrameworkSocket.TESTLIST_TAG)) {
-                        // Exclude [TESTLIST] from message for better formatting.
-                        line = "> " + line.substring(TestFrameworkSocket.TESTLIST_TAG.length() + 1);
-                        testListBuilder.append(line).append(System.lineSeparator());
-                    } else {
-                        messagesBuilder.append(line).append(System.lineSeparator());
-                    }
-                } else {
-                    nonStdOutBuilder.append(line).append(System.lineSeparator());
-                }
-            }
-            System.out.println();
-            if (!testListBuilder.isEmpty()) {
-                System.out.println("Run flag defined test list");
-                System.out.println("--------------------------");
-                System.out.println(testListBuilder);
-                System.out.println();
-            }
-            if (!messagesBuilder.isEmpty()) {
-                System.out.println("Messages from Test VM");
-                System.out.println("---------------------");
-                System.out.println(messagesBuilder);
-            }
-            irEncoding = nonStdOutBuilder.toString();
-        } else {
-            irEncoding = output;
-        }
     }
 
     private void checkTestVMExitCode() {
         final int exitCode = oa.getExitValue();
         if (EXCLUDE_RANDOM || REPORT_STDOUT || (VERBOSE && exitCode == 0)) {
-            System.out.println("--- OUTPUT TestFramework test VM ---");
+            System.out.println("--- OUTPUT TestFramework Test VM ---");
             System.out.println(oa.getOutput());
         }
 
@@ -221,7 +187,7 @@ public class TestVMProcess {
     }
 
     /**
-     * Exit code was non-zero of test VM. Check the stderr to determine what kind of exception that should be thrown to
+     * Exit code was non-zero of Test VM. Check the stderr to determine what kind of exception that should be thrown to
      * react accordingly later.
      */
     private void throwTestVMException() {
@@ -246,12 +212,14 @@ public class TestVMProcess {
         int exitCode = oa.getExitValue();
         String stdErr = oa.getStderr();
         String stdOut = "";
-        if (exitCode == 134) {
+        boolean osIsWindows = Platform.isWindows();
+        boolean JVMHadError = (!osIsWindows && exitCode == 134) || (osIsWindows && exitCode == -1);
+        if (JVMHadError) {
             // Also dump the stdout if we experience a JVM error (e.g. to show hit assertions etc.).
             stdOut = System.lineSeparator() + System.lineSeparator() + "Standard Output" + System.lineSeparator()
                      + "---------------" + System.lineSeparator() + oa.getOutput();
         }
-        return "TestFramework test VM exited with code " + exitCode + System.lineSeparator() + stdOut
+        return "TestFramework Test VM exited with code " + exitCode + System.lineSeparator() + stdOut
                + System.lineSeparator() + commandLine + System.lineSeparator() + System.lineSeparator()
                + "Error Output" + System.lineSeparator() + "------------" + System.lineSeparator() + stdErr
                + System.lineSeparator() + System.lineSeparator();
