@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -32,7 +32,6 @@ import javax.xml.stream.events.Characters;
 import javax.xml.stream.events.XMLEvent;
 import org.testng.Assert;
 import org.testng.annotations.DataProvider;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 import org.xml.sax.InputSource;
 import org.xml.sax.SAXException;
@@ -43,11 +42,9 @@ import org.xml.sax.ext.DefaultHandler2;
  * @test
  * @bug 8158619
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow common.CDataChunkSizeTest
  * @run testng/othervm common.CDataChunkSizeTest
  * @summary Verifies the support of property jdk.xml.cdataChunkSize
  */
-@Listeners({jaxp.library.BasePolicy.class})
 public class CDataChunkSizeTest {
 
     final static String CDATA_CHUNK_SIZE = "jdk.xml.cdataChunkSize";
