@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2006, 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2006, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,7 @@
  * @test
  * @bug 6402062 6487891
  * @summary Tests Statement encoding
- * @run main/othervm -Djava.security.manager=allow java_beans_Statement
+ * @run main/othervm java_beans_Statement
  * @author Sergey Malenkov
  */
 
@@ -33,7 +33,7 @@ import java.beans.Statement;
 
 public final class java_beans_Statement extends AbstractTest<Statement> {
     public static void main(String[] args) {
-        new java_beans_Statement().test(true);
+        new java_beans_Statement().test();
     }
 
     protected Statement getObject() {
