@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,65 +23,95 @@
 
 package jdk.jpackage.test;
 
+import static java.util.stream.Collectors.groupingBy;
+import static java.util.stream.Collectors.mapping;
+import static java.util.stream.Collectors.toCollection;
+import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.toMap;
+import static java.util.stream.Collectors.toSet;
+import static jdk.jpackage.test.AdditionalLauncher.forEachAdditionalLauncher;
+
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.io.UncheckedIOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
+import java.nio.file.LinkOption;
 import java.nio.file.Path;
 import java.security.SecureRandom;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.OptionalInt;
 import java.util.Set;
+import java.util.TreeSet;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
-import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.spi.ToolProvider;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import jdk.jpackage.internal.IOUtils;
-import jdk.jpackage.internal.AppImageFile;
-import jdk.jpackage.internal.ApplicationLayout;
-import jdk.jpackage.internal.PackageFile;
-import static jdk.jpackage.test.AdditionalLauncher.forEachAdditionalLauncher;
-import jdk.jpackage.test.Functional.ThrowingConsumer;
-import jdk.jpackage.test.Functional.ThrowingFunction;
-import jdk.jpackage.test.Functional.ThrowingSupplier;
+import java.util.stream.StreamSupport;
+import jdk.jpackage.internal.model.DottedVersion;
+import jdk.jpackage.internal.util.MacBundle;
+import jdk.jpackage.internal.util.Result;
+import jdk.jpackage.internal.util.RuntimeReleaseFile;
+import jdk.jpackage.internal.util.function.ThrowingConsumer;
+import jdk.jpackage.internal.util.function.ThrowingFunction;
+import jdk.jpackage.internal.util.function.ThrowingRunnable;
+import jdk.jpackage.internal.util.function.ThrowingSupplier;
 
 /**
  * jpackage command line with prerequisite actions. Prerequisite actions can be
  * anything. The simplest is to compile test application and pack in a jar for
  * use on jpackage command line.
  */
-public final class JPackageCommand extends CommandArguments<JPackageCommand> {
+public class JPackageCommand extends CommandArguments<JPackageCommand> {
 
+    @SuppressWarnings("this-escape")
     public JPackageCommand() {
+        toolProviderSource = new ToolProviderSource();
+        executorPrototype = new Executor().dumpOutput(true);
         prerequisiteActions = new Actions();
         verifyActions = new Actions();
+        excludeStandardAsserts(StandardAssert.MAIN_LAUNCHER_DESCRIPTION);
+        removeOldOutputBundle = true;
     }
 
-    public JPackageCommand(JPackageCommand cmd) {
+    private JPackageCommand(JPackageCommand cmd, boolean immutable) {
         args.addAll(cmd.args);
-        withToolProvider = cmd.withToolProvider;
-        saveConsoleOutput = cmd.saveConsoleOutput;
-        suppressOutput = cmd.suppressOutput;
+        toolProviderSource = cmd.toolProviderSource.copy();
+        executorPrototype = cmd.executorPrototype.copy();
         ignoreDefaultRuntime = cmd.ignoreDefaultRuntime;
         ignoreDefaultVerbose = cmd.ignoreDefaultVerbose;
-        immutable = cmd.immutable;
+        removeOldOutputBundle = cmd.removeOldOutputBundle;
+        this.immutable = immutable;
         prerequisiteActions = new Actions(cmd.prerequisiteActions);
         verifyActions = new Actions(cmd.verifyActions);
+        standardAsserts = cmd.standardAsserts;
+        readOnlyPathAsserts = cmd.readOnlyPathAsserts;
+        validators = cmd.validators;
+        executeInDirectory = cmd.executeInDirectory;
+        winMsiLogFile = cmd.winMsiLogFile;
+        unpackedPackageDirectory = cmd.unpackedPackageDirectory;
+        explicitVersion = cmd.explicitVersion;
     }
 
     JPackageCommand createImmutableCopy() {
-        JPackageCommand reply = new JPackageCommand(this);
-        reply.immutable = true;
-        return reply;
+        return new JPackageCommand(this, true);
+    }
+
+    JPackageCommand createMutableCopy() {
+        return new JPackageCommand(this, false);
     }
 
     public JPackageCommand setArgumentValue(String argName, String newValue) {
@@ -145,16 +175,13 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
         return null;
     }
 
-    public String getArgumentValue(String argName,
-            Function<JPackageCommand, String> defaultValueSupplier) {
-        return getArgumentValue(argName, defaultValueSupplier, v -> v);
-    }
-
     public <T> T getArgumentValue(String argName,
             Supplier<T> defaultValueSupplier,
             Function<String, T> stringConverter) {
-        return getArgumentValue(argName, (unused) -> defaultValueSupplier.get(),
-                stringConverter);
+        return getArgumentValue(argName,
+                Optional.ofNullable(defaultValueSupplier).map(supplier -> {
+                    return (Function<JPackageCommand, T>)unused -> supplier.get();
+                }).orElse(null), stringConverter);
     }
 
     public String getArgumentValue(String argName,
@@ -182,6 +209,17 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
         return addArguments(name, value.toString());
     }
 
+    public JPackageCommand mutate(Consumer<JPackageCommand> mutator) {
+        return mutate(List.of(mutator));
+    }
+
+    public JPackageCommand mutate(Iterable<Consumer<JPackageCommand>> mutators) {
+        for (var mutator : mutators) {
+            mutator.accept(this);
+        }
+        return this;
+    }
+
     public boolean isImagePackageType() {
         return PackageType.IMAGE == getArgumentValue("--type",
                 () -> null, PACKAGE_TYPES::get);
@@ -198,7 +236,10 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
     }
 
     public Path outputDir() {
-        return getArgumentValue("--dest", () -> Path.of("."), Path::of);
+        var path = getArgumentValue("--dest", () -> Path.of("."), Path::of);
+        return Optional.ofNullable(executeInDirectory).map(base -> {
+            return base.resolve(path);
+        }).orElse(path);
     }
 
     public Path inputDir() {
@@ -206,30 +247,133 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
     }
 
     public String version() {
-        return getArgumentValue("--app-version", () -> "1.0");
+        return PropertyFinder.findAppProperty(this,
+                PropertyFinder.<JPackageCommand>of(Optional.ofNullable(explicitVersion))
+                        .or(PropertyFinder.cmdlineOptionWithValue("--app-version"))
+                        .or(JPackageCommand::derivedVersion),
+                PropertyFinder.appImageFile(appImageFile -> {
+                    return appImageFile.version();
+                })
+        ).orElse(DEFAULT_VERSION);
+    }
+
+    private Optional<String> derivedVersion() {
+        if (isRuntime()) {
+            var predefinedRuntimePath = Path.of(getArgumentValue("--runtime-image"));
+            if (TKit.isOSX()) {
+                // This is a macOS runtime bundle.
+                return MacBundle.fromPath(predefinedRuntimePath).map(predefinedRuntimeBundle -> {
+                    return Result.<Optional<String>>of(() -> {
+                        // This is a macOS runtime bundle created from the predefined runtime bundle (not a predefined runtime directory).
+                        // The version of this bundle should be copied from the Info.plist file of the predefined runtime bundle.
+                        return MacHelper.readPList(predefinedRuntimeBundle.infoPlistFile()).findValue("CFBundleVersion");
+                    }).value().flatMap(x -> x).or(() -> {
+                        // Failed to read version from the Info.plist file of the predefined runtime bundle.
+                        // Try to read it from the "release" file of the predefined runtime directory.
+                        return normalizedVersionFromRuntimeReleaseFile(predefinedRuntimeBundle.homeDir());
+                    });
+                }).orElseGet(() -> {
+                    return normalizedVersionFromRuntimeReleaseFile(predefinedRuntimePath);
+                });
+            } else {
+                return normalizedVersionFromRuntimeReleaseFile(predefinedRuntimePath);
+            }
+        } else {
+            return Optional.empty();
+        }
+    }
+
+    private Optional<String> normalizedVersionFromRuntimeReleaseFile(Path runtimeDir) {
+        return Result.of(() -> {
+            return RuntimeReleaseFile.loadFromRuntime(runtimeDir).getJavaVersion().toString();
+        }, Exception.class).value().map(JPackageCommand::normalizeDerivedVersion).map(map -> {
+            return Objects.requireNonNull(map.get(packageType()));
+        });
+    }
+
+    public static Map<PackageType, String> normalizeDerivedVersion(String version) {
+        var dotted = DottedVersion.lazy(version);
+
+        var map = new HashMap<PackageType, String>();
+
+        // Linux
+        map.put(PackageType.LINUX_IMAGE, version);
+        map.put(PackageType.LINUX_DEB, version);
+        if (dotted.getUnprocessedSuffix().contains("-")) {
+            map.put(PackageType.LINUX_RPM, dotted.toComponentsString());
+        } else {
+            map.put(PackageType.LINUX_RPM, version);
+        }
+
+        // macOS
+        PackageType.ALL_MAC.forEach(type -> {
+            map.put(type, dotted.trim(3).pad(1).toComponentsString());
+        });
+
+        // Windows
+        PackageType.ALL_WINDOWS.forEach(type -> {
+            DottedVersion ver;
+            if (dotted.getComponentsCount() < 2) {
+                ver = dotted.pad(2);
+            } else {
+                ver = dotted.trim(4);
+            }
+            map.put(type, ver.toComponentsString());
+        });
+
+        map.put(PackageType.IMAGE, Objects.requireNonNull(map.get(PackageType.appImageForOS(PackageType.IMAGE.os()))));
+
+        return map;
+    }
+
+    /**
+     * Sets application version.
+     * <p>
+     * Use this method to explicitly set the application version. Normally, the
+     * application version can be derived from the command line, but sometimes, when
+     * jpackage derives it from other sources, the {@code JPackageCommand} class
+     * can't get it correctly. Use this method in these uncommon cases.
+     *
+     * @param v the application version or {@code null} to reset previously set
+     *          value
+     * @return this
+     */
+    public JPackageCommand version(String v) {
+        verifyMutable();
+        explicitVersion = v;
+        return this;
+    }
+
+    public String fullVersion() {
+        if (isImagePackageType() || !PackageType.LINUX.contains(packageType())) {
+            return version();
+        } else {
+            return version() + LinuxHelper.getReleaseSuffix(this);
+        }
     }
 
     public String name() {
-        String appImage = getArgumentValue("--app-image", () -> null);
-        if (appImage != null) {
-            String name =  AppImageFile.extractAppName(Path.of(appImage));
-            // can be null if using foreign app-image
-            return ((name != null) ? name : getArgumentValue("--name"));
-        }
-        return getArgumentValue("--name", () -> getArgumentValue("--main-class"));
+        return nameFromAppImage().or(this::nameFromBasicArgs).or(this::nameFromRuntimeImage).orElseThrow();
     }
 
     public String installerName() {
         verifyIsOfType(PackageType.NATIVE);
-        String installerName = getArgumentValue("--name",
-                () -> getArgumentValue("--main-class", () -> null));
-        if (installerName == null) {
-            String appImage = getArgumentValue("--app-image");
-            if (appImage != null) {
-                installerName = AppImageFile.extractAppName(Path.of(appImage));
-            }
-        }
-        return installerName;
+        return nameFromBasicArgs().or(this::nameFromAppImage).or(this::nameFromRuntimeImage).orElseThrow();
+    }
+
+    private Optional<String> nameFromAppImage() {
+        return Optional.ofNullable(getArgumentValue("--app-image"))
+                .map(Path::of).map(AppImageFile::load).map(AppImageFile::mainLauncherName);
+    }
+
+    private Optional<String> nameFromRuntimeImage() {
+        return Optional.ofNullable(getArgumentValue("--runtime-image"))
+                .map(Path::of).map(Path::getFileName).map(Path::toString);
+    }
+
+    private Optional<String> nameFromBasicArgs() {
+        return Optional.ofNullable(getArgumentValue("--name")).or(
+                () -> Optional.ofNullable(getArgumentValue("--main-class")));
     }
 
     public boolean isRuntime() {
@@ -247,104 +391,57 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
 
     public JPackageCommand setInputToEmptyDirectory() {
         if (Files.exists(inputDir())) {
-            try {
-                setArgumentValue("--input", TKit.createTempDirectory("input"));
-            } catch (IOException ex) {
-                throw new RuntimeException(ex);
-            }
+            setArgumentValue("--input", TKit.createTempDirectory("input"));
         }
         return this;
     }
 
     public JPackageCommand setFakeRuntime() {
-        verifyMutable();
-
-        ThrowingConsumer<Path> createBulkFile = path -> {
-            Files.createDirectories(path.getParent());
-            try (FileOutputStream out = new FileOutputStream(path.toFile())) {
-                byte[] bytes = new byte[4 * 1024];
-                new SecureRandom().nextBytes(bytes);
-                out.write(bytes);
-            }
-        };
-
         addPrerequisiteAction(cmd -> {
-            Path fakeRuntimeDir = TKit.workDir().resolve("fake_runtime");
-
-            TKit.trace(String.format("Init fake runtime in [%s] directory",
-                    fakeRuntimeDir));
-
-            Files.createDirectories(fakeRuntimeDir);
-
-            if (TKit.isLinux()) {
-                // Need to make the code in rpm spec happy as it assumes there is
-                // always something in application image.
-                fakeRuntimeDir.resolve("bin").toFile().mkdir();
-            }
-
-            if (TKit.isOSX()) {
-                // Make MacAppImageBuilder happy
-                createBulkFile.accept(fakeRuntimeDir.resolve(Path.of(
-                        "lib/jli/libjli.dylib")));
-            }
-
-            // Mak sure fake runtime takes some disk space.
-            // Package bundles with 0KB size are unexpected and considered
-            // an error by PackageTest.
-            createBulkFile.accept(fakeRuntimeDir.resolve(Path.of("bin", "bulk")));
-
-            cmd.addArguments("--runtime-image", fakeRuntimeDir);
+            cmd.setArgumentValue("--runtime-image", createInputRuntimeImage(RuntimeImageType.RUNTIME_TYPE_FAKE));
         });
 
         return this;
     }
 
-    public void createJPackageXMLFile(String mainLauncher, String mainClass)
-            throws IOException {
-        Path jpackageXMLFile = AppImageFile.getPathInAppImage(
-                Optional.ofNullable(getArgumentValue("--app-image")).map(
-                        Path::of).orElseThrow(() -> {
-                            return new RuntimeException(
-                                    "Error: --app-image expected");
-                        }));
-
-        IOUtils.createXml(jpackageXMLFile, xml -> {
-                xml.writeStartElement("jpackage-state");
-                xml.writeAttribute("version", AppImageFile.getVersion());
-                xml.writeAttribute("platform", AppImageFile.getPlatform());
-
-                xml.writeStartElement("app-version");
-                xml.writeCharacters("1.0");
-                xml.writeEndElement();
-
-                xml.writeStartElement("main-launcher");
-                xml.writeCharacters(mainLauncher);
-                xml.writeEndElement();
-
-                xml.writeStartElement("main-class");
-                xml.writeCharacters(mainClass);
-                xml.writeEndElement();
-
-                xml.writeStartElement("signed");
-                xml.writeCharacters("false");
-                xml.writeEndElement();
-
-                xml.writeStartElement("app-store");
-                xml.writeCharacters("false");
-                xml.writeEndElement();
-            });
+    public JPackageCommand usePredefinedAppImage(JPackageCommand appImageCmd) {
+        appImageCmd.verifyIsOfType(PackageType.IMAGE);
+        verifyIsOfType(PackageType.IMAGE);
+        appImageCmd.getVerifyActionsWithRole(ActionRole.LAUNCHER_VERIFIER).forEach(verifier -> {
+            addVerifyAction(verifier, ActionRole.LAUNCHER_VERIFIER);
+        });
+        return usePredefinedAppImage(appImageCmd.outputBundle());
     }
 
-    JPackageCommand addPrerequisiteAction(ThrowingConsumer<JPackageCommand> action) {
+    public JPackageCommand usePredefinedAppImage(Path predefinedAppImagePath) {
+        return setArgumentValue("--app-image", Objects.requireNonNull(predefinedAppImagePath))
+                .removeArgumentWithValue("--input");
+    }
+
+    JPackageCommand addPrerequisiteAction(ThrowingConsumer<JPackageCommand, ? extends Exception> action) {
         verifyMutable();
         prerequisiteActions.add(action);
         return this;
     }
 
-    JPackageCommand addVerifyAction(ThrowingConsumer<JPackageCommand> action) {
+    JPackageCommand addVerifyAction(ThrowingConsumer<JPackageCommand, ? extends Exception> action) {
+        return addVerifyAction(action, ActionRole.DEFAULT);
+    }
+
+    enum ActionRole {
+        DEFAULT,
+        LAUNCHER_VERIFIER,
+        ;
+    }
+
+    JPackageCommand addVerifyAction(ThrowingConsumer<JPackageCommand, ? extends Exception> action, ActionRole actionRole) {
         verifyMutable();
-        verifyActions.add(action);
+        verifyActions.add(action, actionRole);
         return this;
+    }
+
+    Stream<ThrowingConsumer<JPackageCommand, ? extends Exception>> getVerifyActionsWithRole(ActionRole actionRole) {
+        return verifyActions.actionsWithRole(actionRole);
     }
 
     /**
@@ -381,6 +478,77 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
         return cmd;
     }
 
+    public enum RuntimeImageType {
+
+        /**
+         * Runtime suitable for running the default "Hello" test app.
+         */
+        RUNTIME_TYPE_HELLO_APP,
+
+        /**
+         * Fake runtime.
+         */
+        RUNTIME_TYPE_FAKE,
+
+        ;
+    }
+
+    public static Path createInputRuntimeImage() {
+        return createInputRuntimeImage(RuntimeImageType.RUNTIME_TYPE_HELLO_APP);
+    }
+
+    public static Path createInputRuntimeImage(RuntimeImageType role) {
+        Objects.requireNonNull(role);
+
+        return switch (role) {
+
+            case RUNTIME_TYPE_FAKE -> {
+                Consumer<Path> createBulkFile = ThrowingConsumer.toConsumer(path -> {
+                    Files.createDirectories(path.getParent());
+                    try (FileOutputStream out = new FileOutputStream(path.toFile())) {
+                        byte[] bytes = new byte[4 * 1024];
+                        new SecureRandom().nextBytes(bytes);
+                        out.write(bytes);
+                    }
+                });
+
+                var runtimeImageDir = TKit.createTempDirectory("fake_runtime");
+
+                TKit.trace(String.format("Init fake runtime in [%s] directory", runtimeImageDir));
+
+                if (TKit.isOSX()) {
+                    // Make MacAppImageBuilder happy
+                    createBulkFile.accept(runtimeImageDir.resolve(Path.of("lib/jli/libjli.dylib")));
+                }
+
+                // Make sure fake runtime takes some disk space.
+                // Package bundles with 0KB size are unexpected and considered
+                // an error by PackageTest.
+                createBulkFile.accept(runtimeImageDir.resolve(Path.of("lib", "bulk")));
+
+                yield runtimeImageDir;
+            }
+
+            case RUNTIME_TYPE_HELLO_APP -> {
+                yield DEFAULT_RUNTIME_IMAGE.filter(Predicate.not(JPackageCommand::isFakeRuntime)).orElseGet(() -> {
+                    var dir = TKit.createTempDirectory("runtime-image").resolve("data");
+
+                    new Executor().setToolProvider(JavaTool.JLINK)
+                            .dumpOutput()
+                            .addArguments(
+                                    "--output", dir.toString(),
+                                    "--add-modules", "java.desktop",
+                                    "--strip-debug",
+                                    "--no-header-files",
+                                    "--no-man-pages")
+                            .execute();
+
+                    return dir;
+                });
+            }
+        };
+    }
+
     public JPackageCommand setPackageType(PackageType type) {
         verifyMutable();
         type.applyTo(this);
@@ -388,7 +556,7 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
     }
 
     public JPackageCommand setDefaultAppName() {
-        return addArguments("--name", TKit.getCurrentDefaultAppName());
+        return setArgumentValue("--name", TKit.getCurrentDefaultAppName());
     }
 
     /**
@@ -402,12 +570,14 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
     public Path outputBundle() {
         final String bundleName;
         if (isImagePackageType()) {
-            if (TKit.isOSX() && hasArgument("--app-image")) {
-                return Path.of(getArgumentValue("--app-image", () -> null));
-            }
-            String dirName = name();
-            if (TKit.isOSX()) {
-                dirName = dirName + ".app";
+            String dirName;
+            if (!TKit.isOSX()) {
+                dirName = name();
+            } else if (MacHelper.signPredefinedAppImage(this)) {
+                // Request to sign external app image, not to build a new one
+                dirName = getArgumentValue("--app-image");
+            } else {
+                dirName = name() + ".app";
             }
             bundleName = dirName;
         } else if (TKit.isLinux()) {
@@ -453,7 +623,7 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
 
         if (layout != null) {
         } else if (isRuntime()) {
-            layout = ApplicationLayout.javaRuntime();
+            layout = ApplicationLayout.platformJavaRuntime();
         } else {
             layout = ApplicationLayout.platformAppImage();
         }
@@ -502,7 +672,7 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
 
     Path unpackedPackageDirectory() {
         verifyIsOfType(PackageType.NATIVE);
-        return getArgumentValue(UNPACKED_PATH_ARGNAME, () -> null, Path::of);
+        return unpackedPackageDirectory;
     }
 
     /**
@@ -551,6 +721,24 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
     }
 
     /**
+     * Returns the name of the main launcher. It will read the name of the main
+     * launcher from the external app image if such is specified.
+     *
+     * @return the name of the main launcher
+     *
+     * @throws IllegalArgumentException if the command is configured for packaging
+     *                                  Java runtime
+     */
+    public String mainLauncherName() {
+        verifyNotRuntime();
+        return name();
+    }
+
+    boolean isMainLauncher(String launcherName) {
+        return launcherName == null || mainLauncherName().equals(launcherName);
+    }
+
+    /**
      * Returns path for application launcher with the given name.
      *
      * E.g.: [jpackage --name Foo --type rpm] -> `/opt/foo/bin/Foo`
@@ -566,7 +754,7 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
     public Path appLauncherPath(String launcherName) {
         verifyNotRuntime();
         if (launcherName == null) {
-            launcherName = name();
+            launcherName = mainLauncherName();
         }
 
         if (TKit.isWindows()) {
@@ -584,21 +772,61 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
     }
 
     /**
-     * Returns names of all additional launchers or empty list if none
-     * configured.
+     * Returns names of additional launchers or an empty list if none configured.
+     * <p>
+     * If {@code lookupInPrederfinedAppImage} is {@code true} and the command is
+     * configured with an external app image, it will read names of the additional
+     * launchers from the external app image.
+     *
+     * @param lookupInPrederfinedAppImage if to read names of additional launchers
+     *                                    from an external app image
+     *
+     * @return the names of additional launchers
      */
-    public List<String> addLauncherNames() {
+    public List<String> addLauncherNames(boolean lookupInPrederfinedAppImage) {
+        if (isRuntime()) {
+            return List.of();
+        }
+
         List<String> names = new ArrayList<>();
+        if (lookupInPrederfinedAppImage) {
+            Optional.ofNullable(getArgumentValue("--app-image"))
+                    .map(Path::of)
+                    .map(AppImageFile::load)
+                    .map(AppImageFile::addLaunchers)
+                    .map(Map::keySet)
+                    .ifPresent(names::addAll);
+        }
         forEachAdditionalLauncher(this, (launcherName, propFile) -> {
             names.add(launcherName);
         });
-        return names;
+        return Collections.unmodifiableList(names);
     }
 
-    private void verifyNotRuntime() {
+    /**
+     * Returns names of all launchers.
+     * <p>
+     * If the list is not empty, the first element is {@code null} referencing the
+     * main launcher. In the case of runtime packaging, the list is empty.
+     *
+     * @return the names of all launchers
+     */
+    public List<String> launcherNames(boolean lookupInPrederfinedAppImage) {
         if (isRuntime()) {
-            throw new IllegalArgumentException("Java runtime packaging");
+            return List.of();
         }
+
+        List<String> names = new ArrayList<>();
+        names.add(null);
+        names.addAll(addLauncherNames(lookupInPrederfinedAppImage));
+        return Collections.unmodifiableList(names);
+    }
+
+    JPackageCommand verifyNotRuntime() {
+        if (isRuntime()) {
+            throw new UnsupportedOperationException("Java runtime packaging");
+        }
+        return this;
     }
 
     /**
@@ -616,35 +844,38 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
     public Path appLauncherCfgPath(String launcherName) {
         verifyNotRuntime();
         if (launcherName == null) {
-            launcherName = name();
+            launcherName = mainLauncherName();
         }
         return appLayout().appDirectory().resolve(launcherName + ".cfg");
     }
 
     public boolean isFakeRuntime(String msg) {
-        Path runtimeDir = appRuntimeDirectory();
-
-        final Collection<Path> criticalRuntimeFiles;
-        if (TKit.isWindows()) {
-            criticalRuntimeFiles = WindowsHelper.CRITICAL_RUNTIME_FILES;
-        } else if (TKit.isLinux()) {
-            criticalRuntimeFiles = LinuxHelper.CRITICAL_RUNTIME_FILES;
-        } else if (TKit.isOSX()) {
-            criticalRuntimeFiles = MacHelper.CRITICAL_RUNTIME_FILES;
-        } else {
-            throw TKit.throwUnknownPlatformError();
-        }
-
-        if (!criticalRuntimeFiles.stream().anyMatch(v -> {
-            return runtimeDir.resolve(v).toFile().exists();
-        })) {
+        if (isFakeRuntime(appRuntimeDirectory())) {
             // Fake runtime
+            Path runtimeDir = appRuntimeDirectory();
             TKit.trace(String.format(
                     "%s because application runtime directory [%s] is incomplete",
                     msg, runtimeDir));
             return true;
         }
         return false;
+    }
+
+    private static boolean isFakeRuntime(Path runtimeDir) {
+        final Collection<Path> criticalRuntimeFiles;
+        if (TKit.isWindows()) {
+            criticalRuntimeFiles = WindowsHelper.CRITICAL_RUNTIME_FILES;
+        } else if (TKit.isLinux()) {
+            criticalRuntimeFiles = LinuxHelper.CRITICAL_RUNTIME_FILES;
+        } else if (TKit.isOSX()) {
+            runtimeDir = MacBundle.fromPath(runtimeDir).map(MacBundle::homeDir).orElse(runtimeDir);
+            criticalRuntimeFiles = MacHelper.CRITICAL_RUNTIME_FILES;
+        } else {
+            throw TKit.throwUnknownPlatformError();
+        }
+
+        return !criticalRuntimeFiles.stream().map(runtimeDir::resolve).allMatch(
+                Files::exists);
     }
 
     public boolean canRunLauncher(String msg) {
@@ -674,32 +905,76 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
     }
 
     public boolean isPackageUnpacked() {
-        return hasArgument(UNPACKED_PATH_ARGNAME);
+        return unpackedPackageDirectory != null;
+    }
+
+    public static void useToolProviderByDefault(ToolProvider jpackageToolProvider) {
+        TKit.state().setProperty(DefaultToolProviderKey.VALUE, Objects.requireNonNull(jpackageToolProvider));
     }
 
     public static void useToolProviderByDefault() {
-        defaultWithToolProvider = true;
+        useToolProviderByDefault(JavaTool.JPACKAGE.asToolProvider());
     }
 
     public static void useExecutableByDefault() {
-        defaultWithToolProvider = false;
+        TKit.state().setProperty(DefaultToolProviderKey.VALUE, null);
     }
 
     public JPackageCommand useToolProvider(boolean v) {
         verifyMutable();
-        withToolProvider = v;
+        if (v) {
+            toolProviderSource.useDefaultToolProvider();
+        } else {
+            toolProviderSource.useProcess();
+        }
+        return this;
+    }
+
+    public JPackageCommand useToolProvider(ToolProvider v) {
+        verifyMutable();
+        toolProviderSource.useToolProvider(v);
+        return this;
+    }
+
+    public JPackageCommand setDirectory(Path v) {
+        verifyMutable();
+        executeInDirectory = v;
+        return this;
+    }
+
+    public JPackageCommand removeEnvVars(String ... envVarName) {
+        verifyMutable();
+        List.of(envVarName).forEach(executorPrototype::removeEnvVar);
+        return this;
+    }
+
+    public JPackageCommand setEnvVar(String envVarName, String envVarValue) {
+        verifyMutable();
+        executorPrototype.setEnvVar(envVarName, envVarValue);
         return this;
     }
 
     public JPackageCommand saveConsoleOutput(boolean v) {
         verifyMutable();
-        saveConsoleOutput = v;
+        executorPrototype.saveOutput(v);
+        return this;
+    }
+
+    public JPackageCommand discardStdout(boolean v) {
+        verifyMutable();
+        executorPrototype.discardStdout(v);
+        return this;
+    }
+
+    public JPackageCommand discardStderr(boolean v) {
+        verifyMutable();
+        executorPrototype.discardStderr(v);
         return this;
     }
 
     public JPackageCommand dumpOutput(boolean v) {
         verifyMutable();
-        suppressOutput = !v;
+        executorPrototype.dumpOutput(v);
         return this;
     }
 
@@ -709,15 +984,161 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
         return this;
     }
 
+    public JPackageCommand ignoreFakeRuntime() {
+        return ignoreDefaultRuntime(DEFAULT_RUNTIME_IMAGE.map(JPackageCommand::isFakeRuntime).orElse(false));
+    }
+
     public JPackageCommand ignoreDefaultVerbose(boolean v) {
         verifyMutable();
         ignoreDefaultVerbose = v;
         return this;
     }
 
+    /**
+     * Configures this instance to optionally remove the existing output bundle
+     * before running the jpackage command.
+     *
+     * @param v {@code true} to remove existing output bundle before running the
+     *          jpackage command, and {@code false} otherwise
+     * @return this
+     */
+    public JPackageCommand removeOldOutputBundle(boolean v) {
+        verifyMutable();
+        removeOldOutputBundle = v;
+        return this;
+    }
+
+    /**
+     * Returns {@code true} if this instance will remove existing output bundle
+     * before running the jpackage command, and {@code false} otherwise.
+     */
+    public boolean isRemoveOldOutputBundle() {
+        return removeOldOutputBundle;
+    }
+
+    public JPackageCommand validateOut(TKit.TextStreamVerifier validator) {
+        new JPackageOutputValidator().add(validator).applyTo(this);
+        return this;
+    }
+
+    public JPackageCommand validateErr(TKit.TextStreamVerifier validator) {
+        new JPackageOutputValidator().stderr().add(validator).applyTo(this);
+        return this;
+    }
+
+    public JPackageCommand validateResult(Consumer<Executor.Result> validator) {
+        Objects.requireNonNull(validator);
+        saveConsoleOutput(true);
+        validators.add(validator);
+        return this;
+    }
+
+    @FunctionalInterface
+    public interface CannedArgument {
+        public String value(JPackageCommand cmd);
+    }
+
+    public static CannedArgument cannedArgument(Function<JPackageCommand, Object> supplier, String label) {
+        Objects.requireNonNull(supplier);
+        Objects.requireNonNull(label);
+        return new CannedArgument() {
+            @Override
+            public String value(JPackageCommand cmd) {
+                return supplier.apply(cmd).toString();
+            }
+
+            @Override
+            public String toString( ) {
+                return label;
+            }
+        };
+    }
+
+    public static CannedFormattedString makeError(CannedFormattedString v) {
+        return v.addPrefix("message.error-header");
+    }
+
+    public static CannedFormattedString makeError(String key, Object ... args) {
+        return makeError(JPackageStringBundle.MAIN.cannedFormattedString(key, args));
+    }
+
+    public static CannedFormattedString makeAdvice(CannedFormattedString v) {
+        return v.addPrefix("message.advice-header");
+    }
+
+    public static CannedFormattedString makeAdvice(String key, Object ... args) {
+        return makeAdvice(JPackageStringBundle.MAIN.cannedFormattedString(key, args));
+    }
+
+    public String getValue(CannedFormattedString str) {
+        return new CannedFormattedString(str.formatter(), str.format(), str.args().stream().map(arg -> {
+            if (arg instanceof CannedArgument cannedArg) {
+                return cannedArg.value(this);
+            } else {
+                return arg;
+            }
+        }).toList()).getValue();
+    }
+
+    public JPackageCommand validateOut(CannedFormattedString... strings) {
+        new JPackageOutputValidator().expectMatchingStrings(strings).applyTo(this);
+        return this;
+    }
+
+    public JPackageCommand validateErr(CannedFormattedString... strings) {
+        new JPackageOutputValidator().stderr().expectMatchingStrings(strings).applyTo(this);
+        return this;
+    }
+
+    public JPackageCommand validateOutput(
+            Class<? extends CannedFormattedString.Spec> messageGroup,
+            Consumer<JPackageOutputValidator> validatorMutator,
+            List<CannedFormattedString> expectedMessages) {
+
+        Objects.requireNonNull(validatorMutator);
+
+        if (!messageGroup.isEnum()) {
+            throw new IllegalArgumentException();
+        }
+
+        var messageSpecs = messageGroup.getEnumConstants();
+
+        var expectMessageFormats = expectedMessages.stream().map(CannedFormattedString::format).toList();
+
+        var groupMessageFormats = Stream.of(messageSpecs)
+                .map(CannedFormattedString.Spec::format)
+                .collect(Collectors.toMap(x -> x, x -> x))
+                .keySet();
+
+        if (!groupMessageFormats.containsAll(expectMessageFormats)) {
+            // Expected format strings should be a subset of the group format strings.
+            throw new IllegalArgumentException();
+        }
+
+        if (!expectedMessages.isEmpty()) {
+            new JPackageOutputValidator().expectMatchingStrings(expectedMessages).mutate(validatorMutator).applyTo(this);
+        }
+
+        Stream.of(messageSpecs).filter(spec -> {
+            return !expectMessageFormats.contains(spec.format());
+        }).map(CannedFormattedString.Spec::asPattern).map(pattern -> {
+            return TKit.assertTextStream(pattern).negate();
+        }).forEach(validator -> {
+            new JPackageOutputValidator().add(validator).stdoutAndStderr().applyTo(this);
+        });
+
+        return this;
+    }
+
+    public JPackageCommand validateOutput(
+            Class<? extends CannedFormattedString.Spec> messageGroup,
+            Consumer<JPackageOutputValidator> validatorMutator,
+            CannedFormattedString... expected) {
+        return validateOutput(messageGroup, validatorMutator, List.of(expected));
+    }
+
     public boolean isWithToolProvider() {
-        return Optional.ofNullable(withToolProvider).orElse(
-                defaultWithToolProvider);
+        return toolProviderSource.toolProvider().isPresent();
     }
 
     public JPackageCommand executePrerequisiteActions() {
@@ -725,26 +1146,23 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
         return this;
     }
 
-    public JPackageCommand executeVerifyActions() {
-        verifyActions.run();
-        return this;
-    }
-
-    private Executor createExecutor() {
-        Executor exec = new Executor()
-                .saveOutput(saveConsoleOutput).dumpOutput(!suppressOutput)
+    Executor createExecutor() {
+        Executor exec = executorPrototype.copy()
+                .setDirectory(executeInDirectory)
                 .addArguments(args);
 
-        if (isWithToolProvider()) {
-            exec.setToolProvider(JavaTool.JPACKAGE);
-        } else {
+        toolProviderSource.toolProvider().ifPresentOrElse(exec::setToolProvider, () -> {
             exec.setExecutable(JavaTool.JPACKAGE);
             if (TKit.isWindows()) {
                 exec.setWindowsTmpDir(System.getProperty("java.io.tmpdir"));
             }
-        }
+        });
 
         return exec;
+    }
+
+    public Executor.Result executeIgnoreExitCode() {
+        return execute(OptionalInt.empty());
     }
 
     public Executor.Result execute() {
@@ -752,22 +1170,25 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
     }
 
     public Executor.Result execute(int expectedExitCode) {
+        return execute(OptionalInt.of(expectedExitCode));
+    }
+
+    private Executor.Result execute(OptionalInt expectedExitCode) {
+        verifyMutable();
         executePrerequisiteActions();
 
-        if (hasArgument("--dest")) {
-            if (isImagePackageType()) {
-                TKit.deleteDirectoryContentsRecursive(outputDir());
-            } else {
-                nullableOutputBundle().ifPresent(path -> {
-                    if (ThrowingSupplier.toSupplier(() -> TKit.deleteIfExists(
-                            path)).get()) {
-                        TKit.trace(String.format(
-                                "Deleted [%s] file before running jpackage",
-                                path));
-                    }
-                });
-            }
-        }
+        nullableOutputBundle().filter(_ -> {
+            return !(TKit.isOSX() && MacHelper.signPredefinedAppImage(this)) && removeOldOutputBundle;
+        }).ifPresent(path -> {
+            ThrowingRunnable.toRunnable(() -> {
+                if (Files.isDirectory(path)) {
+                    TKit.deleteDirectoryRecursive(path,
+                            String.format("Delete [%s] folder before running jpackage", path));
+                } else if (TKit.deleteIfExists(path)) {
+                    TKit.trace(String.format("Deleted [%s] file before running jpackage", path));
+                }
+            }).run();
+        });
 
         Path resourceDir = getArgumentValue("--resource-dir", () -> null, Path::of);
         if (resourceDir != null && Files.isDirectory(resourceDir)) {
@@ -786,13 +1207,39 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
             }
         }
 
-        Executor.Result result = new JPackageCommand(this)
-                .adjustArgumentsBeforeExecution()
-                .createExecutor()
-                .execute(expectedExitCode);
+        if (expectedExitCode.isPresent() && expectedExitCode.orElseThrow() == 0
+                && !isImagePackageType()) {
+            ConfigFilesStasher.INSTANCE.accept(this);
+        }
 
-        if (result.exitCode == 0) {
-            executeVerifyActions();
+        final var copy = createMutableCopy().adjustArgumentsBeforeExecution();
+
+        final var directoriesAssert = new ReadOnlyPathsAssert(copy);
+
+        standardAssertOutputValidators().forEach(validator -> {
+            validator.applyTo(copy);
+        });
+
+        Executor.Result result;
+        if (expectedExitCode.isEmpty()) {
+            result = copy.createExecutor().executeWithoutExitCodeCheck();
+        } else {
+            result = copy.createExecutor().execute(expectedExitCode.orElseThrow());
+        }
+
+        directoriesAssert.updateAndAssert();
+
+        if (expectedExitCode.isPresent() && expectedExitCode.orElseThrow() == 0
+                && isImagePackageType()) {
+            ConfigFilesStasher.INSTANCE.accept(this);
+        }
+
+        for (final var validator: copy.validators) {
+            validator.accept(result);
+        }
+
+        if (result.getExitCode() == 0 && expectedExitCode.isPresent()) {
+            verifyActions.run();
         }
 
         return result;
@@ -800,7 +1247,7 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
 
     public Executor.Result executeAndAssertHelloAppImageCreated() {
         Executor.Result result = executeAndAssertImageCreated();
-        HelloApp.executeLauncherAndVerifyOutput(this);
+        LauncherVerifier.executeMainLauncherAndVerifyOutput(this);
         return result;
     }
 
@@ -812,61 +1259,443 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
 
     public JPackageCommand assertImageCreated() {
         verifyIsOfType(PackageType.IMAGE);
-        assertAppLayout();
+        runStandardAsserts();
         return this;
     }
 
-    JPackageCommand assertAppLayout() {
-        assertAppImageFile();
-        assertPackageFile();
+    public static enum Macro {
+        APPDIR(cmd -> {
+            return cmd.appLayout().appDirectory().toString();
+        }),
+        BINDIR(cmd -> {
+            return cmd.appLayout().launchersDirectory().toString();
+        }),
+        ROOTDIR(cmd -> {
+            return (cmd.isImagePackageType() ? cmd.outputBundle() : cmd.appInstallationDirectory()).toString();
+        });
 
-        TKit.assertDirectoryExists(appRuntimeDirectory());
+        private Macro(Function<JPackageCommand, String> getValue) {
+            this.getValue = Objects.requireNonNull(getValue);
+        }
 
-        if (!isRuntime()) {
-            TKit.assertExecutableFileExists(appLauncherPath());
-            TKit.assertFileExists(appLauncherCfgPath(null));
+        String value(JPackageCommand cmd) {
+            return getValue.apply(cmd);
+        }
 
-            if (TKit.isOSX()) {
-                TKit.assertFileExists(appRuntimeDirectory().resolve(
-                        "Contents/MacOS/libjli.dylib"));
+        private final Function<JPackageCommand, String> getValue;
+    }
+
+    public String macroValue(Macro macro) {
+        return macro.value(this);
+    }
+
+    private static final class ReadOnlyPathsAssert {
+        ReadOnlyPathsAssert(JPackageCommand cmd) {
+            this.asserts = cmd.readOnlyPathAsserts.stream().map(a -> {
+                return a.getPaths(cmd).stream().map(dir -> {
+                    return Map.entry(a, dir);
+                });
+            }).flatMap(x -> x).collect(groupingBy(Map.Entry::getKey, mapping(Map.Entry::getValue, toList())));
+            snapshots = createSnapshots();
+        }
+
+        void updateAndAssert() {
+            final var newSnapshots = createSnapshots();
+            for (final var a : asserts.keySet().stream().sorted().toList()) {
+                final var snapshotGroup = snapshots.get(a);
+                final var newSnapshotGroup = newSnapshots.get(a);
+                for (int i = 0; i < snapshotGroup.size(); i++) {
+                    snapshotGroup.get(i).assertEquals(newSnapshotGroup.get(i),
+                            String.format("Check jpackage didn't modify ${%s}=[%s]", a, asserts.get(a).get(i)));
+                }
             }
         }
 
+        private Map<ReadOnlyPathAssert, List<TKit.PathSnapshot>> createSnapshots() {
+            return asserts.entrySet().stream()
+                    .map(e -> {
+                        return Map.entry(e.getKey(), e.getValue().stream().map(TKit.PathSnapshot::new).toList());
+                    }).collect(toMap(Map.Entry::getKey, Map.Entry::getValue));
+        }
+
+        private final Map<ReadOnlyPathAssert, List<Path>> asserts;
+        private final Map<ReadOnlyPathAssert, List<TKit.PathSnapshot>> snapshots;
+    }
+
+    public static enum ReadOnlyPathAssert {
+        APP_IMAGE(new Builder("--app-image").enable(cmd -> {
+            // External app image should be R/O unless it is an app image signing on macOS.
+            return !(TKit.isOSX() && MacHelper.signPredefinedAppImage(cmd));
+        }).create()),
+        APP_CONTENT(new Builder("--app-content").multiple().create()),
+        RESOURCE_DIR(new Builder("--resource-dir").create()),
+        MAC_DMG_CONTENT(new Builder("--mac-dmg-content").multiple().create()),
+        RUNTIME_IMAGE(new Builder("--runtime-image").create());
+
+        ReadOnlyPathAssert(Function<JPackageCommand, List<Path>> getPaths) {
+            this.getPaths = getPaths;
+        }
+
+        List<Path> getPaths(JPackageCommand cmd) {
+            return getPaths.apply(cmd).stream().toList();
+        }
+
+        private static final class Builder {
+
+            Builder(String argName) {
+                this.argName = Objects.requireNonNull(argName);
+            }
+
+            Builder multiple() {
+                multiple = true;
+                return this;
+            }
+
+            Builder enable(Predicate<JPackageCommand> v) {
+                enable = v;
+                return this;
+            }
+
+            Function<JPackageCommand, List<Path>> create() {
+                return cmd -> {
+                    if (!cmd.hasArgument(argName) || (enable != null && !enable.test(cmd))) {
+                        return List.of();
+                    } else {
+                        final List<Optional<Path>> dirs;
+                        if (multiple) {
+                            dirs = Stream.of(cmd.getAllArgumentValues(argName))
+                                    .flatMap(Builder::tokenizeValue)
+                                    .map(Builder::toExistingFile).toList();
+                        } else {
+                            dirs = Optional.ofNullable(cmd.getArgumentValue(argName))
+                                    .map(Builder::toExistingFile).map(List::of).orElseGet(List::of);
+                        }
+
+                        final var mutablePaths = Stream.of("--temp", "--dest")
+                                .map(cmd::getArgumentValue)
+                                .filter(Objects::nonNull)
+                                .map(Builder::toExistingFile)
+                                .flatMap(Optional::stream)
+                                .collect(toSet());
+
+                        return dirs.stream()
+                                .flatMap(Optional::stream)
+                                .filter(Predicate.not(mutablePaths::contains))
+                                .toList();
+                    }
+                };
+            }
+
+            private static Optional<Path> toExistingFile(String path) {
+                Objects.requireNonNull(path);
+                try {
+                    return Optional.of(Path.of(path)).filter(Files::exists).map(Path::toAbsolutePath);
+                } catch (InvalidPathException ex) {
+                    return Optional.empty();
+                }
+            }
+
+            private static Stream<String> tokenizeValue(String str) {
+                return Stream.of(str.split(","));
+            }
+
+            private Predicate<JPackageCommand> enable;
+            private final String argName;
+            private boolean multiple;
+        }
+
+        private final Function<JPackageCommand, List<Path>> getPaths;
+    }
+
+    public JPackageCommand setReadOnlyPathAsserts(ReadOnlyPathAssert... asserts) {
+        verifyMutable();
+        readOnlyPathAsserts = Set.of(asserts);
         return this;
     }
 
-    private void assertAppImageFile() {
-        Path appImageDir = Path.of("");
-        if (isImagePackageType() && hasArgument("--app-image")) {
-            appImageDir = Path.of(getArgumentValue("--app-image", () -> null));
+    public JPackageCommand excludeReadOnlyPathAssert(ReadOnlyPathAssert... asserts) {
+        var asSet = Set.of(asserts);
+        return setReadOnlyPathAsserts(readOnlyPathAsserts.stream().filter(Predicate.not(
+                asSet::contains)).toArray(ReadOnlyPathAssert[]::new));
+    }
+
+    public static enum StandardAssert {
+        APP_IMAGE_FILE(JPackageCommand::assertAppImageFile),
+        PACKAGE_FILE(JPackageCommand::assertPackageFile),
+        NO_MAIN_LAUNCHER_IN_RUNTIME(cmd -> {
+            if (cmd.isRuntime()) {
+                TKit.assertPathExists(convertFromRuntime(cmd).appLauncherPath(), false);
+            }
+        }),
+        NO_MAIN_LAUNCHER_CFG_FILE_IN_RUNTIME(cmd -> {
+            if (cmd.isRuntime()) {
+                TKit.assertPathExists(convertFromRuntime(cmd).appLauncherCfgPath(null), false);
+            }
+        }),
+        MAIN_LAUNCHER_FILES(cmd -> {
+            if (!cmd.isRuntime()) {
+                new LauncherVerifier(cmd).verify(cmd,
+                        LauncherVerifier.Action.VERIFY_INSTALLED,
+                        LauncherVerifier.Action.VERIFY_MAC_ENTITLEMENTS);
+            }
+        }),
+        MAIN_LAUNCHER_DESCRIPTION(cmd -> {
+            if (!cmd.isRuntime()) {
+                new LauncherVerifier(cmd).verify(cmd, LauncherVerifier.Action.VERIFY_DESCRIPTION);
+            }
+        }),
+        MAIN_JAR_FILE(cmd -> {
+            Optional.ofNullable(cmd.getArgumentValue("--main-jar", () -> null)).ifPresent(mainJar -> {
+                TKit.assertFileExists(cmd.appLayout().appDirectory().resolve(mainJar));
+            });
+        }),
+        RUNTIME_DIRECTORY(cmd -> {
+            TKit.assertDirectoryExists(cmd.appRuntimeDirectory());
+            if (TKit.isOSX()) {
+                var libjliPath = cmd.appRuntimeDirectory().resolve("Contents/MacOS/libjli.dylib");
+                TKit.assertFileExists(libjliPath);
+            }
+        }),
+        MAC_BUNDLE_STRUCTURE(cmd -> {
+            if (TKit.isOSX()) {
+                MacHelper.verifyBundleStructure(cmd);
+            }
+        }),
+        MAC_BUNDLE_UNSIGNED_SIGNATURE(cmd -> {
+            if (TKit.isOSX()) {
+                MacHelper.verifyUnsignedBundleSignature(cmd);
+            }
+        }),
+        MAC_RUNTIME_PLIST_JDK_KEY(cmd -> {
+            if (TKit.isOSX()) {
+                var appLayout = cmd.appLayout();
+                var plistPath = appLayout.runtimeDirectory().resolve("Contents/Info.plist");
+                var keyName = "JavaVM";
+                var keyValue = MacHelper.readPList(plistPath).findDictValue(keyName);
+                if (cmd.isRuntime() || Files.isDirectory(appLayout.runtimeHomeDirectory().resolve("bin"))) {
+                    // There are native launchers in the runtime
+                    TKit.assertTrue(keyValue.isPresent(), String.format(
+                            "Check the runtime plist file [%s] contains '%s' key",
+                            plistPath, keyName));
+                } else {
+                    TKit.assertTrue(keyValue.isEmpty(), String.format(
+                            "Check the runtime plist file [%s] contains NO '%s' key",
+                            plistPath, keyName));
+                }
+            }
+        }),
+        PREDEFINED_APP_IMAGE_COPY(cmd -> {
+            Optional.ofNullable(cmd.getArgumentValue("--app-image")).filter(_ -> {
+                if (!TKit.isOSX() || !cmd.hasArgument("--mac-sign")) {
+                    return true;
+                } else {
+                    var signAppImage = MacHelper.signPredefinedAppImage(cmd)
+                            || MacHelper.hasAppImageSignIdentity(cmd)
+                            || MacHelper.isSignWithoutSignIdentity(cmd);
+                    return !signAppImage;
+                }
+            }).filter(_ -> {
+                // Don't examine the contents of the output app image if this is Linux package installing in the "/usr" subtree.
+                return Optional.<Boolean>ofNullable(cmd.onLinuxPackageInstallDir(null, _ -> false)).orElse(true);
+            }).map(Path::of).ifPresent(predefinedAppImage -> {
+
+                TKit.trace(String.format(
+                        "Check contents of the predefined app image [%s] copied verbatim",
+                        predefinedAppImage));
+
+                var outputAppImageDir = cmd.pathToUnpackedPackageFile(cmd.appInstallationDirectory());
+
+                try (var walk = Files.walk(predefinedAppImage)) {
+                    var filteredWalk = walk;
+                    if (!cmd.expectAppImageFile()) {
+                        var appImageFile = AppImageFile.getPathInAppImage(predefinedAppImage);
+                        // Exclude ".jpackage.xml" as it should no be in the output bundle.
+                        var pred = Predicate.<Path>isEqual(appImageFile).negate();
+                        if (TKit.isOSX()) {
+                            // On MacOS exclude files that can be signed as their digests change.
+                            pred = pred.and(path -> {
+                                return MacHelper.isVerbatimCopyFromPredefinedAppImage(cmd, path);
+                            });
+                        }
+
+                        filteredWalk = walk.filter(pred);
+                    }
+
+                    var verbatimPaths = filteredWalk.collect(toCollection(TreeSet::new));
+
+                    // Remove nonempty directories from the collection of paths copied verbatim.
+                    verbatimPaths.removeAll(verbatimPaths.stream().map(Path::getParent).toList());
+
+                    verbatimPaths.forEach(ThrowingConsumer.toConsumer(p -> {
+                        if (Files.isDirectory(p, LinkOption.NOFOLLOW_LINKS)) {
+                            TKit.assertDirectoryExists(p);
+                        } else {
+                            TKit.assertSameFileContent(p, outputAppImageDir.resolve(predefinedAppImage.relativize(p)));
+                        }
+                    }));
+                } catch (IOException ex) {
+                    throw new UncheckedIOException(ex);
+                }
+
+                TKit.trace("Done");
+            });
+        }),
+        LINUX_APPLAUNCHER_LIB(cmd -> {
+            if (TKit.isLinux() && !cmd.isRuntime()) {
+                TKit.assertFileExists(cmd.appLayout().libapplauncher());
+            }
+        }),
+        LINUX_PACKAGE_ARCH(cmd -> {
+            if (TKit.isLinux() && !cmd.isImagePackageType()) {
+                var asserter = TKit.assertTextStream(LinuxUnexpectedBundleArchRegexp.VALUE).negate();
+                return Stream.of(true, false).map(stderr -> {
+                    var validator = new JPackageOutputValidator();
+                    if (stderr) {
+                        return validator.stderr();
+                    } else {
+                        return validator;
+                    }
+                }).map(validator -> {
+                    return validator.add(asserter);
+                }).toList();
+            } else {
+                return List.of();
+            }
+        }),
+        ;
+
+        StandardAssert(
+                Consumer<JPackageCommand> action,
+                Function<JPackageCommand, Collection<JPackageOutputValidator>> outputValidatorsSupplier) {
+            this.action = action;
+            this.outputValidatorsSupplier = outputValidatorsSupplier;
         }
 
-        final Path lookupPath = AppImageFile.getPathInAppImage(appImageDir);
-        if (isRuntime() || (!isImagePackageType() && !TKit.isOSX())) {
-            assertFileInAppImage(lookupPath, null);
-        } else if (!TKit.isOSX()) {
-            assertFileInAppImage(lookupPath, lookupPath);
+        StandardAssert(Consumer<JPackageCommand> action) {
+            this(Objects.requireNonNull(action), null);
+        }
+
+        StandardAssert(Function<JPackageCommand, Collection<JPackageOutputValidator>> outputValidatorsSupplier) {
+            this(null, Objects.requireNonNull(outputValidatorsSupplier));
+        }
+
+        private static JPackageCommand convertFromRuntime(JPackageCommand cmd) {
+            var copy = cmd.createMutableCopy();
+            copy.removeArgumentWithValue("--runtime-image");
+            if (!copy.hasArgument("--name")) {
+                copy.addArguments("--name", cmd.nameFromRuntimeImage().orElseThrow());
+            }
+            return copy;
+        }
+
+        Stream<JPackageOutputValidator> outputValidators(JPackageCommand cmd) {
+            Objects.requireNonNull(cmd);
+            return Optional.ofNullable(outputValidatorsSupplier).map(v -> {
+                return v.apply(cmd);
+            }).stream().flatMap(Collection::stream);
+        }
+
+        void apply(JPackageCommand cmd) {
+            Objects.requireNonNull(cmd);
+            if (action != null) {
+                action.accept(cmd);
+            }
+        }
+
+        private final Consumer<JPackageCommand> action;
+        private final Function<JPackageCommand, Collection<JPackageOutputValidator>> outputValidatorsSupplier;
+
+        private static final class LinuxUnexpectedBundleArchRegexp {
+            private static final Pattern ANY = Pattern.compile(".*");
+            private static final Pattern ARCHITECTURE_PROPERTY = Pattern.compile("Arch|Architecture");
+
+            static final Pattern VALUE = JPackageStringBundle.MAIN.cannedFormattedStringAsPattern("error.unexpected-package-property", arg -> {
+                return switch ((String)arg) {
+                    case "propertyName" -> {
+                        yield ARCHITECTURE_PROPERTY;
+                    }
+                    default -> {
+                        yield ANY;
+                    }
+                };
+            }, "propertyName", "expectedValue", "actualValue", "customResource");
+        }
+    }
+
+    public JPackageCommand setStandardAsserts(StandardAssert ... asserts) {
+        verifyMutable();
+        standardAsserts = Set.of(asserts);
+        return this;
+    }
+
+    public JPackageCommand excludeStandardAsserts(StandardAssert... asserts) {
+        var asSet = Set.of(asserts);
+        return setStandardAsserts(standardAsserts.stream().filter(Predicate.not(
+                asSet::contains)).toArray(StandardAssert[]::new));
+    }
+
+    JPackageCommand runStandardAsserts() {
+        for (var standardAssert : standardAsserts.stream().sorted().toList()) {
+            standardAssert.apply(this);
+        }
+        return this;
+    }
+
+    private List<JPackageOutputValidator> standardAssertOutputValidators() {
+        return standardAsserts.stream().sorted().flatMap(standardAssert -> {
+            return standardAssert.outputValidators(this);
+        }).toList();
+    }
+
+    private boolean expectAppImageFile() {
+        if (isRuntime()) {
+            return false;
+        }
+
+        if (TKit.isOSX()) {
+            if (MacHelper.signPredefinedAppImage(this)) {
+                // Request to sign external app image, ".jpackage.xml" file should exist.
+                return true;
+            }
+
+            if (!isImagePackageType() && hasArgument("--app-image")) {
+                // Build native macOS package from an external app image.
+                // If the external app image is signed, ".jpackage.xml" file should be kept, otherwise removed.
+                return MacHelper.isBundleSigned(Path.of(getArgumentValue("--app-image")));
+            }
+        }
+
+        return isImagePackageType();
+    }
+
+    private void assertAppImageFile() {
+        final Path lookupPath = AppImageFile.getPathInAppImage(Path.of(""));
+
+        if (!expectAppImageFile()) {
+            assertFileNotInAppImage(lookupPath);
         } else {
-            assertFileInAppImage(lookupPath, lookupPath);
+            assertFileInAppImage(lookupPath);
 
-            // If file exist validated important values based on arguments
-            // Exclude validation when we generating packages from predefined
-            // app images, since we do not know if image is signed or not.
-            if (isImagePackageType() || !hasArgument("--app-image")) {
-                final Path rootDir = isImagePackageType() ? outputBundle() :
-                        pathToUnpackedPackageFile(appInstallationDirectory());
+            final Path rootDir = isImagePackageType() ? outputBundle() :
+                pathToUnpackedPackageFile(appInstallationDirectory());
 
-                AppImageFile aif = AppImageFile.load(rootDir);
+            final AppImageFile aif = AppImageFile.load(rootDir);
 
-                boolean expectedValue = hasArgument("--mac-sign");
-                boolean actualValue = aif.isSigned();
-                TKit.assertEquals(Boolean.toString(expectedValue), Boolean.toString(actualValue),
-                    "Check for unexptected value in app image file for <signed>");
+            if (TKit.isOSX()) {
+                var expectedValue = hasArgument("--mac-app-store");
+                var actualValue = aif.macAppStore();
+                TKit.assertEquals(expectedValue, actualValue,
+                    "Check for unexpected value of <app-store> property in app image file");
+            }
 
-                expectedValue = hasArgument("--mac-app-store");
-                actualValue = aif.isAppStore();
-                TKit.assertEquals(Boolean.toString(expectedValue), Boolean.toString(actualValue),
-                    "Check for unexptected value in app image file for <app-store>");
+            // Don't compare the add launchers configured on the command line with the
+            // add launchers listed in the `.jpackage.xml` file if the latter comes from
+            // a predefined app image.
+            if (!hasArgument("--app-image")) {
+                TKit.assertStringListEquals(
+                        addLauncherNames(false).stream().sorted().toList(),
+                        aif.addLaunchers().keySet().stream().sorted().toList(),
+                        "Check additional launcher names");
             }
         }
     }
@@ -875,30 +1704,49 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
         final Path lookupPath = PackageFile.getPathInAppImage(Path.of(""));
 
         if (isRuntime() || isImagePackageType() || TKit.isLinux()) {
-            assertFileInAppImage(lookupPath, null);
+            assertFileNotInAppImage(lookupPath);
         } else {
             if (TKit.isOSX() && hasArgument("--app-image")) {
-                String appImage = getArgumentValue("--app-image",
-                        () -> null);
-                if (AppImageFile.load(Path.of(appImage)).isSigned()) {
-                    assertFileInAppImage(lookupPath, null);
+                String appImage = getArgumentValue("--app-image");
+                if (MacHelper.isBundleSigned(Path.of(appImage))) {
+                    assertFileNotInAppImage(lookupPath);
                 } else {
-                    assertFileInAppImage(lookupPath, lookupPath);
+                    assertFileInAppImage(lookupPath);
                 }
             } else {
-                assertFileInAppImage(lookupPath, lookupPath);
+                assertFileInAppImage(lookupPath);
             }
         }
     }
 
+    public void assertFileInAppImage(Path expectedPath) {
+        assertFileInAppImage(expectedPath.getFileName(), expectedPath);
+    }
+
+    public void assertFileNotInAppImage(Path filename) {
+        assertFileInAppImage(filename, null);
+    }
+
     private void assertFileInAppImage(Path filename, Path expectedPath) {
+        if (expectedPath != null) {
+            if (expectedPath.isAbsolute() || !expectedPath.getFileName().equals(filename.getFileName())) {
+                throw new IllegalArgumentException();
+            }
+        }
+
         if (filename.getNameCount() > 1) {
             assertFileInAppImage(filename.getFileName(), expectedPath);
             return;
         }
 
-        final Path rootDir = isImagePackageType() ? outputBundle() : pathToUnpackedPackageFile(
-                appInstallationDirectory());
+        final Path rootDir;
+        if (TKit.isOSX() && MacHelper.signPredefinedAppImage(this)) {
+            rootDir = Path.of(getArgumentValue("--app-image"));
+        } else if (isImagePackageType()) {
+            rootDir = outputBundle();
+        } else {
+            rootDir = pathToUnpackedPackageFile(appInstallationDirectory());
+        }
 
         try ( Stream<Path> walk = ThrowingSupplier.toSupplier(() -> {
             if (TKit.isLinux() && rootDir.equals(Path.of("/"))) {
@@ -927,26 +1775,50 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
     }
 
     JPackageCommand setUnpackedPackageLocation(Path path) {
+        verifyMutable();
         verifyIsOfType(PackageType.NATIVE);
-        if (path != null) {
-            setArgumentValue(UNPACKED_PATH_ARGNAME, path);
-        } else {
-            removeArgumentWithValue(UNPACKED_PATH_ARGNAME);
-        }
+        unpackedPackageDirectory = path;
         return this;
     }
 
+    JPackageCommand winMsiLogFile(Path v) {
+        verifyMutable();
+        if (!TKit.isWindows()) {
+            throw new UnsupportedOperationException();
+        }
+        this.winMsiLogFile = v;
+        return this;
+    }
+
+    public Optional<Path> winMsiLogFile() {
+        if (!TKit.isWindows()) {
+            throw new UnsupportedOperationException();
+        }
+        return Optional.ofNullable(winMsiLogFile);
+    }
+
+    public Optional<Stream<String>> winMsiLogFileContents() {
+        return winMsiLogFile().map(ThrowingFunction.toFunction(msiLog -> {
+            // MSI log files are UTF16LE-encoded
+            return Files.lines(msiLog, StandardCharsets.UTF_16LE);
+        }));
+    }
+
     private JPackageCommand adjustArgumentsBeforeExecution() {
+        verifyMutable();
         if (!isWithToolProvider()) {
             // if jpackage is launched as a process then set the jlink.debug system property
             // to allow the jlink process to print exception stacktraces on any failure
             addArgument("-J-Djlink.debug=true");
         }
-        if (!hasArgument("--runtime-image") && !hasArgument("--app-image") && DEFAULT_RUNTIME_IMAGE != null && !ignoreDefaultRuntime) {
-            addArguments("--runtime-image", DEFAULT_RUNTIME_IMAGE);
-        }
 
-        if (!hasArgument("--verbose") && TKit.VERBOSE_JPACKAGE && !ignoreDefaultVerbose) {
+        DEFAULT_RUNTIME_IMAGE.filter(_ -> {
+            return Stream.of("--runtime-image", "--jlink-options", "--app-image").noneMatch(this::hasArgument) && !ignoreDefaultRuntime;
+        }).ifPresent(defaultRuntime -> {
+            addArguments("--runtime-image", defaultRuntime);
+        });
+
+        if (!hasArgument("--verbose") && TKit.verboseJPackage() && !ignoreDefaultVerbose) {
             addArgument("--verbose");
         }
 
@@ -962,33 +1834,35 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
         return getPrintableCommandLine();
     }
 
-    public void verifyIsOfType(Collection<PackageType> types) {
-        verifyIsOfType(types.toArray(PackageType[]::new));
+    public final JPackageCommand verifyIsOfType(PackageType ... types) {
+        return verifyIsOfType(Set.of(types));
     }
 
-    public void verifyIsOfType(PackageType ... types) {
-        final var typesSet = Stream.of(types).collect(Collectors.toSet());
+    public final JPackageCommand verifyIsOfType(Iterable<PackageType> types) {
+        return verifyIsOfType(StreamSupport.stream(types.spliterator(), false).collect(toSet()));
+    }
+
+    public JPackageCommand verifyIsOfType(Set<PackageType> types) {
+        Objects.requireNonNull(types);
         if (!hasArgument("--type")) {
             if (!isImagePackageType()) {
-                if (TKit.isLinux() && typesSet.equals(PackageType.LINUX)) {
-                    return;
+                if ((TKit.isLinux() && types.equals(PackageType.LINUX)) || (TKit.isWindows() && types.equals(PackageType.WINDOWS))) {
+                    return this;
                 }
 
-                if (TKit.isWindows() && typesSet.equals(PackageType.WINDOWS)) {
-                    return;
+                if (TKit.isOSX() && types.equals(PackageType.MAC)) {
+                    return this;
                 }
-
-                if (TKit.isOSX() && typesSet.equals(PackageType.MAC)) {
-                    return;
-                }
-            } else if (typesSet.equals(Set.of(PackageType.IMAGE))) {
-                return;
+            } else if (types.equals(Set.of(PackageType.IMAGE))) {
+                return this;
             }
         }
 
-        if (!typesSet.contains(packageType())) {
-            throw new IllegalArgumentException("Unexpected type");
+        if (!types.contains(packageType())) {
+            throw new UnsupportedOperationException(String.format("Unsupported operation for type [%s]", packageType().getType()));
         }
+
+        return this;
     }
 
     public CfgFile readLauncherCfgFile() {
@@ -1000,7 +1874,7 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
         if (isRuntime()) {
             return null;
         }
-        return ThrowingFunction.toFunction(CfgFile::readFromFile).apply(
+        return ThrowingFunction.toFunction(CfgFile::load).apply(
                 appLauncherCfgPath(launcherName));
     }
 
@@ -1035,17 +1909,17 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
         }).collect(Collectors.joining(" "));
     }
 
-    public static Stream<String> stripTimestamps(Stream<String> stream) {
-        // [HH:mm:ss.SSS]
-        final Pattern timestampRegexp = Pattern.compile(
-                "^\\[\\d\\d:\\d\\d:\\d\\d.\\d\\d\\d\\] ");
-        return stream.map(str -> {
-            Matcher m = timestampRegexp.matcher(str);
-            if (m.find()) {
-                str = str.substring(m.end());
-            }
+    public static String stripTimestamp(String str) {
+        final var m = TIMESTAMP_REGEXP.matcher(str);
+        if (m.find()) {
+            return str.substring(m.end());
+        } else {
             return str;
-        });
+        }
+    }
+
+    public static boolean withTimestamp(String str) {
+        return TIMESTAMP_REGEXP.matcher(str).find();
     }
 
     @Override
@@ -1079,19 +1953,48 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
             actions.addAll(other.actions);
         }
 
-        void add(ThrowingConsumer<JPackageCommand> action) {
-            Objects.requireNonNull(action);
+        void add(ThrowingConsumer<JPackageCommand, ? extends Exception> action) {
+            add(action, ActionRole.DEFAULT);
+        }
+
+        void add(ThrowingConsumer<JPackageCommand, ? extends Exception> action, ActionRole role) {
             verifyMutable();
-            actions.add(new Consumer<JPackageCommand>() {
-                @Override
-                public void accept(JPackageCommand t) {
-                    if (!executed) {
-                        executed = true;
-                        ThrowingConsumer.toConsumer(action).accept(t);
-                    }
+            actions.add(new Action(action, role));
+        }
+
+        Stream<ThrowingConsumer<JPackageCommand, ? extends Exception>> actionsWithRole(ActionRole role) {
+            Objects.requireNonNull(role);
+            return actions.stream().filter(action -> {
+                return Objects.equals(action.role(), role);
+            }).map(Action::impl);
+        }
+
+        private static final class Action implements Consumer<JPackageCommand> {
+
+            Action(ThrowingConsumer<JPackageCommand, ? extends Exception> impl, ActionRole role) {
+                this.impl = Objects.requireNonNull(impl);
+                this.role = Objects.requireNonNull(role);
+            }
+
+            ActionRole role() {
+                return role;
+            }
+
+            ThrowingConsumer<JPackageCommand, ? extends Exception> impl() {
+                return impl;
+            }
+
+            @Override
+            public void accept(JPackageCommand cmd) {
+                if (!executed) {
+                    executed = true;
+                    ThrowingConsumer.toConsumer(impl).accept(cmd);
                 }
-                private boolean executed;
-            });
+            }
+
+            private final ActionRole role;
+            private final ThrowingConsumer<JPackageCommand, ? extends Exception> impl;
+            private boolean executed;
         }
 
         @Override
@@ -1100,40 +2003,103 @@ public final class JPackageCommand extends CommandArguments<JPackageCommand> {
             actions.forEach(action -> action.accept(JPackageCommand.this));
         }
 
-        private final List<Consumer<JPackageCommand>> actions;
+        private final List<Action> actions;
     }
 
-    private Boolean withToolProvider;
-    private boolean saveConsoleOutput;
-    private boolean suppressOutput;
+    private static final class ToolProviderSource {
+
+        ToolProviderSource copy() {
+            return new ToolProviderSource(this);
+        }
+
+        void useDefaultToolProvider() {
+            customToolProvider = null;
+            mode = Mode.USE_TOOL_PROVIDER;
+        }
+
+        void useToolProvider(ToolProvider tp) {
+            customToolProvider = Objects.requireNonNull(tp);
+            mode = Mode.USE_TOOL_PROVIDER;
+        }
+
+        void useProcess() {
+            customToolProvider = null;
+            mode = Mode.USE_PROCESS;
+        }
+
+        Optional<ToolProvider> toolProvider() {
+            return switch (mode) {
+                case USE_PROCESS -> {
+                    yield Optional.empty();
+                }
+                case USE_TOOL_PROVIDER -> {
+                    if (customToolProvider != null) {
+                        yield Optional.of(customToolProvider);
+                    } else {
+                        yield TKit.state().findProperty(DefaultToolProviderKey.VALUE).map(ToolProvider.class::cast).or(() -> {
+                            return Optional.of(JavaTool.JPACKAGE.asToolProvider());
+                        });
+                    }
+                }
+                case INHERIT_DEFAULTS -> {
+                    yield TKit.state().findProperty(DefaultToolProviderKey.VALUE).map(ToolProvider.class::cast);
+                }
+            };
+        }
+
+        ToolProviderSource() {
+            mode = Mode.INHERIT_DEFAULTS;
+        }
+
+        private ToolProviderSource(ToolProviderSource other) {
+            this.customToolProvider = other.customToolProvider;
+            this.mode = other.mode;
+        }
+
+        private enum Mode {
+            INHERIT_DEFAULTS,
+            USE_PROCESS,
+            USE_TOOL_PROVIDER
+        }
+
+        private ToolProvider customToolProvider;
+        private Mode mode;
+    }
+
+    private final ToolProviderSource toolProviderSource;
+    private final Executor executorPrototype;
     private boolean ignoreDefaultRuntime;
     private boolean ignoreDefaultVerbose;
+    private boolean removeOldOutputBundle;
     private boolean immutable;
     private final Actions prerequisiteActions;
     private final Actions verifyActions;
-    private static boolean defaultWithToolProvider;
+    private Path executeInDirectory;
+    private Path winMsiLogFile;
+    private Path unpackedPackageDirectory;
+    private String explicitVersion;
+    private Set<ReadOnlyPathAssert> readOnlyPathAsserts = Set.of(ReadOnlyPathAssert.values());
+    private Set<StandardAssert> standardAsserts = Set.of(StandardAssert.values());
+    private List<Consumer<Executor.Result>> validators = new ArrayList<>();
 
-    private final static Map<String, PackageType> PACKAGE_TYPES = Functional.identity(
-            () -> {
-                Map<String, PackageType> reply = new HashMap<>();
-                for (PackageType type : PackageType.values()) {
-                    reply.put(type.getName(), type);
-                }
-                return reply;
-            }).get();
+    private enum DefaultToolProviderKey {
+        VALUE
+    }
 
-    public final static Path DEFAULT_RUNTIME_IMAGE = Functional.identity(() -> {
-        // Set the property to the path of run-time image to speed up
-        // building app images and platform bundles by avoiding running jlink
-        // The value of the property will be automativcally appended to
-        // jpackage command line if the command line doesn't have
-        // `--runtime-image` parameter set.
-        String val = TKit.getConfigProperty("runtime-image");
-        if (val != null) {
-            return Path.of(val);
-        }
-        return null;
-    }).get();
+    private static final Map<String, PackageType> PACKAGE_TYPES = Stream.of(PackageType.values()).filter(type -> {
+        return type.isNative() || type == PackageType.IMAGE;
+    }).collect(toMap(PackageType::getType, x -> x));
 
-    private final static String UNPACKED_PATH_ARGNAME = "jpt-unpacked-folder";
+    // Set the property to the path of run-time image to speed up
+    // building app images and platform bundles by avoiding running jlink.
+    // The value of the property will be automatically appended to
+    // jpackage command line if the command line doesn't have
+    // `--runtime-image` parameter set.
+    private static final Optional<Path> DEFAULT_RUNTIME_IMAGE = Optional.ofNullable(TKit.getConfigProperty("runtime-image")).map(Path::of);
+
+    public static final String DEFAULT_VERSION = "1.0";
+
+    // [HH:mm:ss.SSS]
+    private static final Pattern TIMESTAMP_REGEXP = Pattern.compile(
+            "^\\[\\d\\d:\\d\\d:\\d\\d.\\d\\d\\d\\] ");
 }
